--- a/gnews/10.md
+++ b/gnews/10.md
@@ -1,41 +1,40 @@
 ---
-title: DC大中华时事：达沃斯线上开幕 习近平发言
+title: 疑偷盗技术 中共投资引FBI和投资委员会调查
 ---
-`喜马拉雅-华盛顿DC农场` [轉載自GNews](https://gnews.org/zh-hans/1883053/)
+`GTV新闻访谈` [轉載自GNews](https://gnews.org/zh-hans/1883160/)
 
-*编辑：西北风 / 作图：*虎子哥
+撰稿：MOS- 柳是多水土透
+![](https://assets.gnews.org/wp-content/uploads/2022/01/image-40-1-8.png)
+1月18日，美国媒体透露，美国联邦调查局和外国投资委员会正在调查中共对一家飞机初创公司的投资，此前，有人指控该公司向中进行了不当技术转让。
+![](https://assets.gnews.org/wp-content/uploads/2022/01/image-1548.png)
+据悉，中共企业上海浦东科学技术投资公司，最初以小额投资入股了一家位于加州生产小型两栖飞机的企业，以规避美国外国投资委员会的审查监管。该企业生产的飞行器可被改造，用来生产军用无人机。
 
-![](http://himalayawashingtondc.org/wp-content/uploads/2021/08/ScreenShot-2021-08-01-at-17.25.09@2x.png)
+后来，中共企业逐步增资，至2017年成为该飞机企业的第一大股东。随后，它便以选举代理董事及任命经理人等方式向企业施压，要求将技术转移至中共国。
 
-#   墙国妄语每日驳
+2021年3月，第一架飞机被送至大陆。4月，公司开始知识产权转移，给予了中共“无限制吸收该技术的权利”。
 
-### **0**1.19.2022
+目前，美国联邦调查局和外国投资委员会尚未对该调查发表评论。
 
-[外媒：哈萨克斯坦结束紧急状态 各地恢复秩序\_参考消息网 (cankaoxiaoxi.com)](http://m.cankaoxiaoxi.com/world/20220120/2466688.shtml)
+链接：[Chinese Investment in U.S. Plane Maker Draws FBI, National-Security Reviews](https://www.wsj.com/articles/chinese-investment-in-u-s-plane-maker-draws-fbi-national-security-reviews-11642507206)
 
-***简评：***哈萨克斯坦共和国结束紧急状态。一场平地而起的动乱很快就被多国联合镇压平息。通过郭先生爆料，哈国动乱起因于中共政治内斗习派向哈国索要中共江派私人存储在哈国100多吨黄金引起。从哈国动乱中我们看到哈国经济政治安全完全没有独立自治权，完全依赖中国和俄罗斯，无论哈国或是中国俄罗斯个人利益家族利益己完全凌架于国家利益之上，千年的专制传统真是根深蒂固，即使像哈囯和俄罗斯披上民主法制的外衣结果仍然换汤不换药，随着中共被孤立最终倒台，中亚国家将会发生政治动荡，一系列地缘洗牌重新开始。
+[中共对美航空企业投资引来FBI和国安调查](https://docs.google.com/document/d/1sD567DxtJ7FSgC5hsTTgji3zOciFesKOS22pScFR2ks/edit)
 
-### 01.19.2022
+![](https://assets.gnews.org/wp-content/uploads/2022/01/1-176.png)
 
-[达沃斯线上开幕 习近平称欢迎各种资本在中国合法依规经营 (rfi.fr)](https://amp.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20220117-%E8%BE%BE%E6%B2%83%E6%96%AF%E7%BA%BF%E4%B8%8A%E5%BC%80%E5%B9%95-%E4%B9%A0%E8%BF%91%E5%B9%B3%E7%A7%B0%E6%AC%A2%E8%BF%8E%E5%90%84%E7%A7%8D%E8%B5%84%E6%9C%AC%E5%9C%A8%E4%B8%AD%E5%9B%BD%E5%90%88%E6%B3%95%E4%BE%9D%E8%A7%84%E7%BB%8F%E8%90%A5)
+总编：Jack Li文阳
 
-***简评：***如果没有郭先生的直播爆料，我们怎么会知道达沃斯在世界上是如此重要。能了解这一点，如同我们找到了藏宝图的入口，理清了思路，找到了线索，找到了探索世界奥秘的途径。就像《十万个为什么》这本书一样，达沃斯给您所有答案。中共在全世界的经营布局谋划也我们也了解的越来越清晰。
+校正/发稿：浪迹天涯
 
-### 01.19.2022
-
-[美媒：美国新增新冠确诊病例中99.5%为奥密克戎感染病例\_参考消息网 (cankaoxiaoxi.com)](http://m.cankaoxiaoxi.com/health/20220119/2466595.shtml)
-
-***简评：***虽说现在是网络自由媒体时代，但通过这次美国及全世界被中共发起的病毒疫苗生化战攻击媒体的表现我们知道，网络媒体被邪恶势力掌控后破坏力有多大，全球现在打过两针疫苗的己经有超过一半，而美国更高达到62%。这就是媒体的力量，中共为什么投入巨资打造大外宣，黑暗势力为什么要控制媒体巨头。新中国联邦G news，G-TV 在和敌对势力较量中多重要，敌人有多强大，未来G news ,G-TV 潜力就有多大，我们有上天的加持，正义终将战胜邪恶。
-
-#   港台资讯
-![](https://media.discordapp.net/attachments/858887785507323904/933179728163115078/01.png?width=1043&amp;height=586)![](https://media.discordapp.net/attachments/858887785507323904/933179812040818728/02.png?width=1043&amp;height=586)![](https://media.discordapp.net/attachments/858887785507323904/933179922149699604/03.png?width=1043&amp;height=586)
-
+**更多资讯，更多关注**
+[**纽约香草山农场GTV-香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
+[**纽约香草山农场GTV-MOS TALK 香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
+[**纽约香草山农场Gettr**](https://www.gettr.com/user/himalaya_mos)
+[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
+[**欢迎加入纽约香草山农场 Discord**](https://discord.gg/ChqXAHd)
+![](https://assets.gnews.org/wp-content/uploads/2022/01/image-40-1-8.png)
 
 
 
-*编辑：*西北风
-*作图：虎子哥
-发布：文顾*
 
  
 
