--- a/gnews/19.md
+++ b/gnews/19.md
@@ -1,25 +1,35 @@
 ---
-title: 美高院很少见地发声明驳斥CNN/NPR关于口罩的假新闻
+title: 有声&#124;研究人员发现，感染中共病毒会对人体免疫系统造成长期影响
 ---
-`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/1882963/)
+`MOSREC` [轉載自GNews](https://gnews.org/zh-hans/1883077/)
 
-翻译：  Evalu
-![](https://assets.gnews.org/wp-content/uploads/2022/01/图片3-30.png)
-图片来源：http://www.sinovision.net/
+配音：香草山健身部 – 玫瑰园
+![](https://assets.gnews.org/wp-content/uploads/2021/10/image-40-1-11.png)
+外媒 16日报导，澳洲一名31岁的女护士自去年7月感染中共病毒后，即使已经过治疗，但身体仍然受到病毒副作用的折磨。早前她被确诊患上姿势直立性心动过速综合征和周围神经病变，之后病情就急速恶化，目前她已经几乎不能行走，并且有吞咽困难的状况。
 
-零对冲网1月19日报道，美国高等法院周三在一项报道称法官索尼娅·索托马约尔在关于她在法院询事厅不与她的同事坐在一起是因为尼尔·戈萨奇法官拒绝戴口罩。索托马约尔和戈萨奇作出了回应：“ 报道说索托马约尔法官要求戈萨奇法官戴上口罩，这样的报道让我们惊奇，这是假的，我们有时候在法律上会有不同意见，但我们是友善的同事和朋友。”
+这位女护士的不幸经历得到不少网友的认同，许多感染过中共病毒的人，一段时间后都患上各种不同的慢性疾病。这与早前澳洲临床医学小组的观察不谋而合，研究人员发现，感染中共病毒会对人体免疫系统造成长期影响。
 
-索托马约尔是奥巴马提名的法官，而戈萨奇是川普提名的，他们共同通过法院发言人向大纪元时报发布该声明。
+原文链接：[研究人员发现，感染中共病毒会对人体免疫系统造成长期影响](https://gnews.org/zh-hans/1876498/)
 
-一篇报道来自美国国家广播电台，称法官约翰·罗伯特让其他法官戴上口罩，因为他理解索托马约尔希望大家戴上口罩才觉得放心，
+音频处理/发稿：Daxia
 
-另一篇报道来自CNN，称索托马约尔离开询事厅是因为她对戈萨奇不戴口罩感到不舒服。
+![](https://assets.gnews.org/wp-content/uploads/2022/01/1-025730F4-3253-4907-B549-CD1E7A357616.jpg)
 
-当然不实信息同样也有来自法官，例如索托马约尔和另外二位法官在美国声称“有10万个儿童出现前所未有的严重感染症状，很多人用上了呼吸机“，而事实是，联邦数据显示只有3500例儿童患新冠住院，其中绝大多数是因为其他原因住院的。
+**更多资讯，更多关注**
 
-##### **新闻来源： **[Supreme Court Issues Rare Statement Refuting CNN/NPR ‘Fake News’ About Tension Over Masks](https://www.zerohedge.com/political/supreme-court-issues-rare-statement-refuting-cnnnpr-fake-news-about-tension-over-masks)
+[**纽约香草山农场GTV–香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
 
-# ** **
+[**纽约香草山农场****GTV-MOS TALK****香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
+
+[**纽约香草山农场****Gettr**](https://www.gettr.com/user/himalaya_mos)
+
+[**纽约香草山农场****YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
+
+[**欢迎加入纽约香草山农场 Discord**](https://discord.gg/ChqXAHd)
+
+![](https://assets.gnews.org/wp-content/uploads/2021/12/logo-s2.png)
+
+
 
  
 
