--- a/gnews/20.md
+++ b/gnews/20.md
@@ -1,28 +1,23 @@
 ---
-title: 中共国就违反其法律的“任何言论 ”向奥运选手发出警告
+title: “零容忍”，皇权的“杀无赦”
 ---
-`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/1882959/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1883072/)
 
-编译：花岗岩
-![](https://assets.gnews.org/wp-content/uploads/2022/01/图片2-49.png)
-图片来源：网络截图
+撰稿/配图：东京樱花团/谈古论今
+![](https://assets.gnews.org/wp-content/uploads/2022/01/image-1545.png)
+中共说的全是鬼话，不翻译成人话就听不懂。近来，孙力军的电视认罪，中共誓言“零容忍”，草民屁民以为当今圣上开明，对贪官不再容忍，其实是草民愚钝，听不懂朝廷的鬼话。“零容忍”是共产党的鬼话，翻译成人话的意思是“杀无赦”，即皇权不再容忍他人觊觎发出的诏书。再说白一点，就是习家已经贵为天子，臣子不得犯上作乱，否则“杀无赦”！
 
-据零对冲1月19日报道，在西方媒体和隐私倡导者发出警告的同一周，鉴于北京为跟踪奥运运动员的健康数据而开发的新应用程序被发现有几个惊人的安全缺陷，那些带着个人智能手机参加北京冬奥会的运动员将使自己处于中共国国家监控之下，中共国高层官员向参赛的运动员发出警告。
+中国从秦始皇建立的独裁专政秦帝国开始到今天，政治体制一直是帝制，两千年未变。清王朝灭亡后产生的民国，还没有来得及理顺和适应民主就被中共连骗带抢地夺去了统治权。而中共的政权体制，看似是抄苏俄的作业，实质上根本就是妥妥的中国帝制。毛泽东当之无愧是中共的太祖，其后的各个党魁都是尖屁股皇帝坐不稳，不敢也难以称帝，因此在习近平修改过的党史里，那些走马灯党魁都不算数，他自己才是太祖毛泽东第二，将来的党史应该赋予他习高祖的历史地位。
 
-《华盛顿邮报》在周三报道，北京奥组委官员杨舒在周二的新闻发布会上说：“任何符合奥运精神的言论，我相信都会受到保护。而任何行为或言论违背奥运精神，特别是违反中共国法律法规，也会受到一定的处罚”。
+只有看透了这一层，才能理解习高祖这些年对党内大开杀戒的做法是完全合乎帝制逻辑的。中国的历史就是皇权巩固和皇权衰微的周期性反复更替的历史。每一次皇权更迭都伴随着腥风血雨，皇权一旦衰微，靠近权力中心的权贵富贾就野心膨胀，或蚕食权力或觊觎权力，必然威胁到皇权的安危。当皇权一旦开始趋向巩固的时候，皇权就会动用国家公器名正言顺地大开杀戒。这就是中国历史，历史和草民屁民什么关系都没有，草民屁民在任何朝代都是被宰割的奴隶而已。
 
-该发言表示在2022年冬季奥运会上，外国运动员可能会因为违反中共国法律的言论而面临惩罚，这凸显了对中共国限制政治言论的担忧。这正如《华尔街日报》所解释的那样，在强调中共国将对任何违反其法律和法规的行为保持警惕时，人们担心，由于是在中共国的土地上，即将举行的这届运动会的执法将更加严格。
+所以，习近平已经通过清洗异己巩固了皇帝大位，他已经狂奔在不归路上，如果他做不得终身皇帝就必死无疑，即便死后也要被鞭尸三百。因此，血腥的大规模清洗正在进行时，远没有到能喘息歇手的时候。
 
-尽管国际奥林匹克委员会（IOC）也坚持坚决禁止将奥运会变成政治抗议的场所，但中共国对其规则的表述似乎比国际奥委会的规则要严格一些，这让人怀疑中共国政府打算如何解释和执行它。国际奥委会章程第50条禁止在奥运场馆进行“示威或政治、宗教或种族宣传”。杨舒周二表示，“言论 ”可能会引用中共国法律，受到惩罚，其限制性远远高于许多国家。
+那么，习近平就真的是所向披靡无敌手了吗？权力真的就是固若金汤了吗？答案是不可能的！习近平必败无疑，但是以何种方式、在什么时候兵败如山倒，凡人无法知晓。兴许就是一根不经意的稻草事件就压垮了他！兴许就在今晚北京的城头就变换了大王旗。必然如此！有生就有灭，宇宙规律无可抗拒。
 
-人权组织也在同一时间发出声明，据报道，人权组织正忙于建议运动员需要注意他们的言论，以避免中共国法律的长臂和言论限制，包括可能在社交媒体上，最近网球明星彭帅有争议的短暂“失踪”事件印证了这点。
-
-美国最近一直在游说允许运动员以“尊重 ”的方式强调全球人权问题。正如哥伦比亚广播公司所详述的，“根据国际奥委会的规定，在2月份的冬季奥运会期间，运动员在与记者交谈或在社交媒体上发帖时可以享有言论自由。然而，该委员会没有宣布任何措施来保护抗议的运动员免受中共国的迫害。”
-
-然而，人权观察关于这一情况的声明描述给出答案，“我们知道中共国的人权记录和允许言论自由的情况，所以真的没有什么保护。”
-
-新闻来源：[China Warns Olympic Athletes Over “Any Speech” Contrary To Chinese Laws](https://www.zerohedge.com/political/china-warns-olympic-athletes-over-any-speech-contrary-chinese-laws)
-
+*编辑：东京樱花团/知了知了
+发布：东京樱花团/平安卿卿*
+![](https://assets.gnews.org/wp-content/uploads/2021/12/yht.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
