--- a/gnews/24.md
+++ b/gnews/24.md
@@ -1,23 +1,41 @@
 ---
-title: 秘翻在线：因担心病毒 NBC不会派体育播报团参加北京冬奥会
+title: DC大中华时事：达沃斯线上开幕 习近平发言
 ---
-`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/1882900/)
+`喜马拉雅-华盛顿DC农场` [轉載自GNews](https://gnews.org/zh-hans/1883053/)
 
-**翻译：文斗**
+*编辑：西北风 / 作图：*虎子哥
 
-**校对: 人间四月**
-![](https://assets.gnews.org/wp-content/uploads/2022/01/Screenshot-2022-01-20-122752.jpg)
-据今日美国（usatoday） 19日报道，随着2022年北京冬奥会的临近和对中共病毒（COVID-19）的担忧，美国全国广播公司（NBC）体育频道将不派任何播报团队前往中共国，一位发言人周三下午告诉《今日美国体育》。
+![](http://himalayawashingtondc.org/wp-content/uploads/2021/08/ScreenShot-2021-08-01-at-17.25.09@2x.png)
 
-NBC体育频道的通讯高级副总裁格雷格·休斯（Greg Hughes）在接受电话采访时说：“基于对中共病毒的担忧，我们的奥运会播报团队将在斯坦福（康涅狄格）基地里播报赛事。” 格雷格称NBC在北京仍有大量的人员，所有的报道将一如既往是一流的，但计划每天都在变化，就像大多数报道奥运会的媒体公司一样。
+#   墙国妄语每日驳
 
-美国全国广播公司的花样滑冰、高山滑雪和单板滑雪的转播团队原本预计会在北京进行播报工作，但这些计划已经被取消。
+### **0**1.19.2022
 
-在奥米炕病毒变种开始在世界各地肆虐之前，人们就已经有担忧，即任何前往北京的人，从各国运动员到已注册的媒体成员，都可能在奥运会期间检测出阳性，并不得不在隔离区度过几天甚至几周。
+[外媒：哈萨克斯坦结束紧急状态 各地恢复秩序\_参考消息网 (cankaoxiaoxi.com)](http://m.cankaoxiaoxi.com/world/20220120/2466688.shtml)
 
-随着中共病毒的不断变化和中共国的零容忍政策，一切都增加了复杂性，NBC为了确保能够为美国观众提供相同质量的体验，于是决定在斯坦福和北京两个城市之间分工合作。
+***简评：***哈萨克斯坦共和国结束紧急状态。一场平地而起的动乱很快就被多国联合镇压平息。通过郭先生爆料，哈国动乱起因于中共政治内斗习派向哈国索要中共江派私人存储在哈国100多吨黄金引起。从哈国动乱中我们看到哈国经济政治安全完全没有独立自治权，完全依赖中国和俄罗斯，无论哈国或是中国俄罗斯个人利益家族利益己完全凌架于国家利益之上，千年的专制传统真是根深蒂固，即使像哈囯和俄罗斯披上民主法制的外衣结果仍然换汤不换药，随着中共被孤立最终倒台，中亚国家将会发生政治动荡，一系列地缘洗牌重新开始。
 
-**原文链接：**[https://www.usatoday.com/story/sports/olympics/2022/01/19/winter-olympics-2022-nbc-tv-beijing-covid-19/6585943001/](https://www.usatoday.com/story/sports/olympics/2022/01/19/winter-olympics-2022-nbc-tv-beijing-covid-19/6585943001/)
+### 01.19.2022
+
+[达沃斯线上开幕 习近平称欢迎各种资本在中国合法依规经营 (rfi.fr)](https://amp.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20220117-%E8%BE%BE%E6%B2%83%E6%96%AF%E7%BA%BF%E4%B8%8A%E5%BC%80%E5%B9%95-%E4%B9%A0%E8%BF%91%E5%B9%B3%E7%A7%B0%E6%AC%A2%E8%BF%8E%E5%90%84%E7%A7%8D%E8%B5%84%E6%9C%AC%E5%9C%A8%E4%B8%AD%E5%9B%BD%E5%90%88%E6%B3%95%E4%BE%9D%E8%A7%84%E7%BB%8F%E8%90%A5)
+
+***简评：***如果没有郭先生的直播爆料，我们怎么会知道达沃斯在世界上是如此重要。能了解这一点，如同我们找到了藏宝图的入口，理清了思路，找到了线索，找到了探索世界奥秘的途径。就像《十万个为什么》这本书一样，达沃斯给您所有答案。中共在全世界的经营布局谋划也我们也了解的越来越清晰。
+
+### 01.19.2022
+
+[美媒：美国新增新冠确诊病例中99.5%为奥密克戎感染病例\_参考消息网 (cankaoxiaoxi.com)](http://m.cankaoxiaoxi.com/health/20220119/2466595.shtml)
+
+***简评：***虽说现在是网络自由媒体时代，但通过这次美国及全世界被中共发起的病毒疫苗生化战攻击媒体的表现我们知道，网络媒体被邪恶势力掌控后破坏力有多大，全球现在打过两针疫苗的己经有超过一半，而美国更高达到62%。这就是媒体的力量，中共为什么投入巨资打造大外宣，黑暗势力为什么要控制媒体巨头。新中国联邦G news，G-TV 在和敌对势力较量中多重要，敌人有多强大，未来G news ,G-TV 潜力就有多大，我们有上天的加持，正义终将战胜邪恶。
+
+#   港台资讯
+![](https://media.discordapp.net/attachments/858887785507323904/933179728163115078/01.png?width=1043&amp;height=586)![](https://media.discordapp.net/attachments/858887785507323904/933179812040818728/02.png?width=1043&amp;height=586)![](https://media.discordapp.net/attachments/858887785507323904/933179922149699604/03.png?width=1043&amp;height=586)
+
+
+
+
+*编辑：*西北风
+*作图：虎子哥
+发布：文顾*
 
  
 
