--- a/gnews/26.md
+++ b/gnews/26.md
@@ -1,31 +1,23 @@
 ---
-title: 全球最大虚拟货币交易网站之一被黑！ 损失1500万美元以太币！
+title: 新冠患者的恶梦——注意力和记忆力下降
 ---
-`喜马拉雅农场新西兰站` [轉載自GNews](https://gnews.org/zh-hans/1882893/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1883021/)
 
-作者：V在途中
-发布日期：2022年1月20日
-新闻来源：https://www.sydneytoday.com/
+撰稿：东京樱花团/立正道
+![](https://assets.gnews.org/wp-content/uploads/2022/01/image-1544.png)图片来源于本文链接
+伦敦，19 日，路透社，英国牛津大学的一项研究表明，轻度中共病毒（新冠病毒Covid-19）患者在感染后6—9个月内注意力和记忆力下降，他们并没有意识到这是后遗症。
 
-![](https://assets.gnews.org/wp-content/uploads/2022/01/1642582176_602280.jpg)图片来源于网络
+一些人在感染后出现了“长期COVID”后遗症，其特点是认知问题里的注意力集中力欠佳、健忘、疲劳，目前尚不清楚这种注意力后遗症问题会持续多久。这项研究，是针对中共病毒检测阳性者，他们并没有抱怨自己有后遗症，只是进行了记忆力和认知能力的测查。
 
-据报道，全球最大的加密货币交易所之一 Crypto.com 遭到黑客攻击，至少价值 1500 万美元的以太坊被盗。此次黑客攻击是影响加密货币交易所的一系列安全分支中的最新一次，它进一步损害了人们对新兴加密货币领域的信心。
+结果显示，在感染后长达6个月的情况下，回忆个人经历（称为情景记忆）的能力显著受损。此外，感染9个月后，保持注意力的能力明显低于未感染者。
 
-当用户开始报告他们的资金丢失时，这次攻击才被正式公开，即使是那些启用了双重验证的用户也同样遭到攻击。 Crypto.com 在收到用户投诉后在推特上表示，网站将暂停提款。
+牛津大学实验心理学系Sijja Zhao博士说：“令人吃惊的是，被测试者并没有感觉到他们的注意力和记忆力下降了。”并且还说“经过数月后认知力的慢性影响才会显现出来。”
 
-![](https://assets.gnews.org/wp-content/uploads/2022/01/捕获.gif)
+信息来源：[コロナ軽症者、注意力や記憶力低下　後遺症の自覚なくても＝英研究](https://jp.reuters.com/article/health-coronavirus-britain-attention-idJPKBN2JT06E)
 
-此次攻击的具体损失数据是由研究区块链数据的安全公司 PeckShield 公布的。它发现至少有 4600 以太币正在通过 Tornado Cash 进行“洗钱”，这是一种以太坊隐私协议，它破坏了源地址和目标地址之间的链接。
-
-此次黑客攻击值得注意，因为 Crypto.com 并不是一个不起眼的交易所，而是最大的交易所之一，其 24 小时交易量超过 30 亿美元，与 Coinbase 相当。有趣的是，Crypto.com 尚未正式确认黑客入侵。该公司已承诺用户的资金是安全的。该公司正在内部调查，预计将在未来几天发布报告或详细声明。它还采取措施加强其安全基础设施。
-
-***原文链接：***
-
-[https://www.sydneytoday.com/content-50003820635](https://www.sydneytoday.com/content-50003820635)
-
-审核校对：Barry Jack
-上传排版：V在途中
-
+*编辑：东京樱花团/知了知了
+发布：东京樱花团/平安卿卿*
+![](https://assets.gnews.org/wp-content/uploads/2021/12/yht.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
