--- a/gnews/31.md
+++ b/gnews/31.md
@@ -1,21 +1,23 @@
 ---
-title: 【中日财经爆】荷兰继续禁止ASML光刻机出口中共国
+title: NHK党党首立花在YouTube上发布NHK用户信息被判刑
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1882825/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1882975/)
 
-整理编辑：东京樱花团/peterwong
-![](https://assets.gnews.org/wp-content/uploads/2022/01/image-1539.png)[图片来源](https://www.morningbrew.com/emerging-tech/stories/2021/03/15/meet-asml-worlds-largest-semiconductor-equipment-manufacturer)
-艾司摩尔(ASML)首席执行官周三（1月19日）表示，该公司尚未获准向中共国出口其最先进的光刻机。这些设备是制造先进计算机芯片所必需的。
+撰稿：东京樱花团/待命（文晓）
+![](https://assets.gnews.org/wp-content/uploads/2022/01/image-1543.png)（图片源自本文链接）
+1月20日，东京地方法院以非法获取NHK观众的个人信息并在视频网站上公布，妨碍业务的罪名，判处“因违反《律师法》第72条与NHK对簿公堂”的党首立花孝志2年6个月监禁，缓期4年执行。
 
-在美国政府的要求下，荷兰政府已拒绝向艾司摩尔颁发出口光刻机的许可证，这些机器是有军事用途的“两用”设备。
+54岁的立花孝志被指控在2019年妨碍NHK的业务，在视频网站YouTube上发布了从NHK订阅费的收费公司前雇员那里非法获得的用户信息，并在互联网上发布视频，威胁已经退党的中央区议员：我要毁了你的人生。
 
-艾司摩尔CEOPeterWennink表示，中共国不太可能独立复制顶尖的光刻技术，因为艾司摩尔依赖于“不懈的创新”和整合只有非中共国供应商才能提供的组件。
+被告立花不认罪，他说：这是合法的言论活动、表达活动、政治活动和竞选活动，没有任何违法之处。检察院鉴于被告“只有不自然、不合理的借口，没有表现出悔意，再次犯罪的可能性很大”，诉求对其监禁两年零六个月。
 
-在光刻市场几乎处于垄断地位的艾司摩尔，并不受限于向中共国出口较老的技术。2021年，艾司摩尔在中共国的销售额约为22亿美元，占该公司销售额的16%，仅次于台湾和韩国。
+在今天的裁决中，东京地方法院判定是“以非法方式获取用户信息，公然将NHK工作人员当作人质，反复威胁，超出允许的政治活动范围”，判处他两年零六个月的监禁，缓刑四年。
 
-消息来源：[艾司摩尔CEO称公司仍未获得向中国出口最先进光刻机的许可证](https://cn.reuters.com/article/asml-ceo-china-export-licence-0120-idCNKBS2JU04Y?il=0)
+NHK的正式名称是日本放送協会。笔者今天早上看到有民众自发演唱一首相关歌曲，歌名是【解体NHK之歌（之一）】歌词大意是：让传播向中国共产党的声音顶礼膜拜信息的NHK解体吧！把缴纳的放送费还给我们！
 
-*校对：东京樱花团/喜马拉雅的微尘
+信息来源：[N党・立花党首に有罪判決 「人生潰しに行く」発言、NHK受信料契約者情報のYouTube投稿（TBS系（JNN）） – Yahoo!ニュース](https://news.yahoo.co.jp/articles/7ee6b2513e38615030f0a540d4cbc27109c5ade6)
+
+*校对：东京樱花团/知了知了
 发布：东京樱花团/平安卿卿*
 ![](https://assets.gnews.org/wp-content/uploads/2021/12/yht.jpg)
  
