--- a/gnews/33.md
+++ b/gnews/33.md
@@ -1,32 +1,28 @@
 ---
-title: 有声&#124;中共在美司法超限战进入深水区
+title: 中共国就违反其法律的“任何言论 ”向奥运选手发出警告
 ---
-`MOSREC` [轉載自GNews](https://gnews.org/zh-hans/1882712/)
+`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/1882959/)
 
-配音：香草山教育部 – Rose
-![This image has an empty alt attribute; its file name is image-40-1-11.png](https://assets.gnews.org/wp-content/uploads/2021/10/image-40-1-11.png)
-在1月17日的法律专场大直播中，郭先生以太平联盟PAG历时五年的缠诉为例，剖析了该案审理过程中的种种不公正环节，指出，这是一起反映中共对美国司法界蓝金黄的最典型案例。这场中共对爆料革命进行的在美司法超限战，即将进入疯狂的殊死较量。
+编译：花岗岩
+![](https://assets.gnews.org/wp-content/uploads/2022/01/图片2-49.png)
+图片来源：网络截图
 
-1月14日，纽约高院法官巴里·奥斯特拉格取消了卡希尔·高登 & 林德尔律师事务所代理太盟PAG的诉讼资格，这是一个有着历史意义的判决。它将中共的红色资本渗透美国律所及法官，甚至司法部官员的重重黑幕撕开了一个口子。这起案件一开始在纽约立案就存在属地争议，初判结果确认了这一点，但随后令人匪夷所思地重启调查。早就签署解除担保义务的所谓3千万担保未付款，经过一系列黑箱操作，至今竟已涉及18楼房产、游艇，以及逾1.5亿美元的罚款。
+据零对冲1月19日报道，在西方媒体和隐私倡导者发出警告的同一周，鉴于北京为跟踪奥运运动员的健康数据而开发的新应用程序被发现有几个惊人的安全缺陷，那些带着个人智能手机参加北京冬奥会的运动员将使自己处于中共国国家监控之下，中共国高层官员向参赛的运动员发出警告。
 
-郭先生强调，中共不惜花费200亿美元在美国展开法律超限战，从远期来说，是要彻底瓦解美国的司法独立体系。而从2017年开始的一系列缠诉，目的是以“藐视法庭”的罪名制造借口，摧毁郭先生一手创立的爆料革命。随着中共末日的来临，其必将进行更加疯狂的攻击。
+《华盛顿邮报》在周三报道，北京奥组委官员杨舒在周二的新闻发布会上说：“任何符合奥运精神的言论，我相信都会受到保护。而任何行为或言论违背奥运精神，特别是违反中共国法律法规，也会受到一定的处罚”。
 
-郭先生表示，此案已经引起主流媒体、APA律师协会、司法部，甚至国会议员的高度关注。只要证据确凿真实，程序公正，坚信美国的民主与法制仍会发挥巨大的作用。这场法律超限战，我们最终一定会赢。
+该发言表示在2022年冬季奥运会上，外国运动员可能会因为违反中共国法律的言论而面临惩罚，这凸显了对中共国限制政治言论的担忧。这正如《华尔街日报》所解释的那样，在强调中共国将对任何违反其法律和法规的行为保持警惕时，人们担心，由于是在中共国的土地上，即将举行的这届运动会的执法将更加严格。
 
-文字版原文：[中共在美司法超限战进入深水区](https://gnews.org/zh-hans/1875842/)
+尽管国际奥林匹克委员会（IOC）也坚持坚决禁止将奥运会变成政治抗议的场所，但中共国对其规则的表述似乎比国际奥委会的规则要严格一些，这让人怀疑中共国政府打算如何解释和执行它。国际奥委会章程第50条禁止在奥运场馆进行“示威或政治、宗教或种族宣传”。杨舒周二表示，“言论 ”可能会引用中共国法律，受到惩罚，其限制性远远高于许多国家。
 
-音频处理：呼吸的雾霾（文小呼吸）
-发稿：呼吸的雾霾（文小呼吸）
+人权组织也在同一时间发出声明，据报道，人权组织正忙于建议运动员需要注意他们的言论，以避免中共国法律的长臂和言论限制，包括可能在社交媒体上，最近网球明星彭帅有争议的短暂“失踪”事件印证了这点。
 
-![](https://assets.gnews.org/wp-content/uploads/2022/01/%E4%B8%80%E6%9C%88%E5%B0%8F%E5%9B%BE-1.jpg)
+美国最近一直在游说允许运动员以“尊重 ”的方式强调全球人权问题。正如哥伦比亚广播公司所详述的，“根据国际奥委会的规定，在2月份的冬季奥运会期间，运动员在与记者交谈或在社交媒体上发帖时可以享有言论自由。然而，该委员会没有宣布任何措施来保护抗议的运动员免受中共国的迫害。”
 
-**更多资讯，更多关注**
-[**纽约香草山农场GTV-香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
-[**纽约香草山农场GTV-MOS TALK 香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
-[**纽约香草山农场Gettr**](https://www.gettr.com/user/himalaya_mos)
-[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
-[**欢迎加入纽约香草山农场 Discord**](https://discord.gg/ChqXAHd)
-![This image has an empty alt attribute; its file name is image-40-1-3.png](https://assets.gnews.org/wp-content/uploads/2021/10/image-40-1-3.png)
+然而，人权观察关于这一情况的声明描述给出答案，“我们知道中共国的人权记录和允许言论自由的情况，所以真的没有什么保护。”
+
+新闻来源：[China Warns Olympic Athletes Over “Any Speech” Contrary To Chinese Laws](https://www.zerohedge.com/political/china-warns-olympic-athletes-over-any-speech-contrary-chinese-laws)
+
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
