--- a/gnews/36.md
+++ b/gnews/36.md
@@ -1,25 +1,19 @@
 ---
-title: 尚未注射加强针的社区
+title: 拜登警告俄罗斯：若入侵乌克兰，将会付出惨重代价
 ---
-`温哥华圆成农场🇨🇦` [轉載自GNews](https://gnews.org/zh-hans/1882671/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1882867/)
 
-2022-01-19
+撰稿：东京樱花团/百花李香
+![](https://assets.gnews.org/wp-content/uploads/2022/01/image-1541.png)图片来自本文网站
+1月20日《共同通信》报道，美国总统乔.拜登19日在白宫举行了上任一周年新闻发布会。他警告正在邻国乌克兰边境部署军队的俄罗斯，“如果你入侵乌克兰，你将对造成的严重经济后果付出惨重代价”。强调银行将无法用美元进行交易。并重申他不排除实施大规模的经济制裁措施。
 
-翻译：追郭大姨
-![](https://assets.gnews.org/wp-content/uploads/2022/01/C8__MOIDFB8H_BCHS.png)图片来源：[The neighbourhoods where booster shots just aren’t making it into arms](https://www.thestar.com/news/gta/2022/01/19/uptake-of-third-vaccine-doses-lags-in-many-parts-of-the-gta-that-have-been-hot-spots.html)
-大多伦多地区的民众在这场疫苗灾难中渐渐觉醒！尤其是皮尔北部地区和多伦多西北部地区的人民！尽管政府大力宣传和工作，这两个地区民众的第三针注射率仍然不20%！
+在关于普京要求乌克兰不要部署战略武器的问题上，拜登表示，也许我们可以做些什么，并承认谈判是有可能的。
 
-**评：**什么是星星之火？这就是！虽然迟了一点，可谁也挡不住，它必将燎原！
+信息源：[バイデン氏、ロシアに警告　隣国侵攻なら「深刻代償」](https://news.yahoo.co.jp/articles/5fa8e9cc54460f0f2202e0b9d461ac9bf529ea2e)
 
-参考链接：[The neighbourhoods where booster shots just aren’t making it into arms](https://www.thestar.com/news/gta/2022/01/19/uptake-of-third-vaccine-doses-lags-in-many-parts-of-the-gta-that-have-been-hot-spots.html)
-
-编辑：LILY
-发布：肥鯮
-校对：
-
-更多资讯请关注：
-[温哥华圆成农场GTV频道](https://gtv.org/user/5f30d3ff91d4727c6a88395d)｜[温哥华圆成农场官方盖特](https://www.gettr.com/user/himalayavang)｜[温哥华圆成农场Discord服务器](https://discord.gg/8RMGcwT8)
-![](https://assets.gnews.org/wp-content/uploads/2021/11/%E8%BE%B2%E5%A0%B4%E6%96%87%E5%AE%A3-3.jpg)
+*编辑：东京樱花团/喜马拉雅的微尘
+发布：东京樱花团/平安卿卿*
+![](https://assets.gnews.org/wp-content/uploads/2021/12/yht.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
