--- a/gnews/49.md
+++ b/gnews/49.md
@@ -1,31 +1,20 @@
 ---
-title: 1.19文贵直播：习大神最后的“辉煌”，最后的演讲
+title: 秘翻在线: 北京疫情扩散，当局实施严格清零防控
 ---
-`秘密翻译组-原创组` [轉載自GNews](https://gnews.org/zh-hans/1881051/)
+`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/1881449/)
 
-整撰：Skagen
-![](https://assets.gnews.org/wp-content/uploads/2022/01/topshot-switzerland-china-wef-economy-health-environment-pandemi.jpeg)
-图片来源：Gettr
+撰稿：西枫westca
 
-2022年1月19号，文贵先生一口气将病毒、冬奥会、中共内斗、达沃斯演讲、疫苗经济的关系解释的清清楚楚。
+校对：Ermat
+![](https://assets.gnews.org/wp-content/uploads/2022/01/unnamed-1-2.jpg)图片来源：路透社
 
-**病毒：** 2022是全人类最黑暗的一年。人类的疫苗灾难5月份开始，但病毒基本接近尾声了。如果不放新毒，这波已经接近尾声了。
+据《自由亚洲电台》1月19日报道， 北京字1月15日确认首例Omicron病例后，又新增5例新冠病毒患者，这代表两种病毒变异株同时在北京存在。
 
-**疫苗经济：**习说，大家开始分享疫苗经济，卖药吧，解决心脏病吧。只要你别搞死我，不脱钩，卖骨灰盒啊，卖心脏病药啊，卖不孕症啊。
+北京疾病预防控制中心19日通告称，新增病例中4人为同一单位冷库装卸工，另一人为同住密切接触者。疫情已经扩散到了城内四区。事件发生后，当局立即对感染者的企业及其居住区实施严格封控，要求居家隔离14天。 其周边区域也划定为管控区。有的人收到海外邮件，健康码也会变黄色。手机上的健康码变黄色，甚至红色，会造成居民有家不能回，或者不准出门的状态。
 
-**冬奥会和内斗**：一定会有冬奥会蓝，天降瑞雪，习主席是上天之子，普天同庆，一定会发生。如果14亿中国人的财富和共产党的邪恶，达不到这一点，就不叫共产党了。一切都是为了内部斗争，塑造习天子的形象，展现与天斗与地斗的无穷的力量。百分百是惨败的冬奥会，没有多少国际领导人会去，没有冬奥经济，是习太阳最后一场搏击演出。
+距离北京冬奥会开幕仅仅10几天，多个省市已出现了Omicron病例。中共当局采取强力封控措施，，完全不顾民生。用极度专制方式把清零当成政绩。 而此时首都北京却出现新病例，对北京冬奥“清零”目标的实现产生不确定因素。
 
-**达沃斯：**王岐山不用出手，郭树清和所谓的经济大家们，包括刘鹤，给习出主意，告诉全世界：“你敢戳破印刷钞票的骗局，不让中国人当我的奴隶，大家一起死”。王岐山太高了，能和曾庆红一起，把习玩的一百年都跟不上。
-
-**结论：习近平基本上宣告结束，冬奥会将成为他最后一次国际演出，达沃斯将成为习最后一次国际演讲。**
-
-郭先生还透露，邓（小平）家在卢森堡的老钱，是“天大的钱”, 过去几十年没动了, 最近买了很多黄金和期货。邓家的举动，证明共产党完了。老钱要动，说明习要出大事。说明他们意识到共产党要完了，习要完了。
-
-来源：
-
-[2022.1.19文贵大直播](https://gtv.org/video/id=61e8077a533c672fca7f4b09)
-
-感谢大雨围城战友
+**新闻来源：**[北京同时面对两种变异毒株 防疫措施混乱居民无所适从 — 普通话主页 (rfa.org)](https://www.rfa.org/mandarin/yataibaodao/huanjing/ql2-01192022083324.html)
 
  
 
