--- a/gnews/6.md
+++ b/gnews/6.md
@@ -1,23 +1,37 @@
 ---
-title: “零容忍”，皇权的“杀无赦”
+title: 宇宙和EV攻入美容业？如何变美？
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1883072/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1883182/)
 
-撰稿/配图：东京樱花团/谈古论今
-![](https://assets.gnews.org/wp-content/uploads/2022/01/image-1545.png)
-中共说的全是鬼话，不翻译成人话就听不懂。近来，孙力军的电视认罪，中共誓言“零容忍”，草民屁民以为当今圣上开明，对贪官不再容忍，其实是草民愚钝，听不懂朝廷的鬼话。“零容忍”是共产党的鬼话，翻译成人话的意思是“杀无赦”，即皇权不再容忍他人觊觎发出的诏书。再说白一点，就是习家已经贵为天子，臣子不得犯上作乱，否则“杀无赦”！
+撰稿：东京樱花团/ haruka春香
+![](https://assets.gnews.org/wp-content/uploads/2022/01/image-1554.png)[图片来源](https://news.yahoo.co.jp/articles/609656de778378825652de664a92b74b7f3a44c3/images/000)
+虽说报纸已过时，但春节报纸整版广告对大企业来说无疑是重要的广告战略之一。 2022年，与伊藤忠、三井物产并列刊登了美容业巨头资生堂的广告。更何况背景是宇宙。在美容行业，业界首次大胆地利用科学和流行的最尖端宇宙，从红白室内眺望蓝色地球，再从地球向上的构图广告中，可以感受到新的美容可能性。登场的女性穿着与太空服截然不同的轻便服装，以“美就是祝愿人们幸福”的文体概括了整体内容。这是令人感动的新年广告。对单纯认为是宇宙时代的读者、女性、为未来着想的人也赋予了“美”的定义。
 
-中国从秦始皇建立的独裁专政秦帝国开始到今天，政治体制一直是帝制，两千年未变。清王朝灭亡后产生的民国，还没有来得及理顺和适应民主就被中共连骗带抢地夺去了统治权。而中共的政权体制，看似是抄苏俄的作业，实质上根本就是妥妥的中国帝制。毛泽东当之无愧是中共的太祖，其后的各个党魁都是尖屁股皇帝坐不稳，不敢也难以称帝，因此在习近平修改过的党史里，那些走马灯党魁都不算数，他自己才是太祖毛泽东第二，将来的党史应该赋予他习高祖的历史地位。
+与宇宙开发并驾齐驱的经济界话题是电动汽车(EV)。作为未来的一大产业，值得关注。因为与自动驾驶有关，IT行业也非常关注。长途驾驶很累，特别是上了年纪，晚上或晚上的前景也不好。为了追求干净、安全、舒适的移动，迫切需要自动驾驶。
 
-只有看透了这一层，才能理解习高祖这些年对党内大开杀戒的做法是完全合乎帝制逻辑的。中国的历史就是皇权巩固和皇权衰微的周期性反复更替的历史。每一次皇权更迭都伴随着腥风血雨，皇权一旦衰微，靠近权力中心的权贵富贾就野心膨胀，或蚕食权力或觊觎权力，必然威胁到皇权的安危。当皇权一旦开始趋向巩固的时候，皇权就会动用国家公器名正言顺地大开杀戒。这就是中国历史，历史和草民屁民什么关系都没有，草民屁民在任何朝代都是被宰割的奴隶而已。
+■铝制品争夺战对美容造成影响？
 
-所以，习近平已经通过清洗异己巩固了皇帝大位，他已经狂奔在不归路上，如果他做不得终身皇帝就必死无疑，即便死后也要被鞭尸三百。因此，血腥的大规模清洗正在进行时，远没有到能喘息歇手的时候。
+那么，这样的宇宙和EV的故事对美容行业也会产生影响，这可能是经济的趣味性、社会的复杂性。不管是宇宙化妆，还是EV广告中选美等，这些不是简单的事情都在幕后进行。
 
-那么，习近平就真的是所向披靡无敌手了吗？权力真的就是固若金汤了吗？答案是不可能的！习近平必败无疑，但是以何种方式、在什么时候兵败如山倒，凡人无法知晓。兴许就是一根不经意的稻草事件就压垮了他！兴许就在今晚北京的城头就变换了大王旗。必然如此！有生就有灭，宇宙规律无可抗拒。
+回望工业，铝就成为叙事的核心。在日本，大部分用于机械和建材的工业用途，但在美容方面，铝罐、铝盒也很受欢迎，而且在脱塑料流程中，将塑料换成铝的商品也在增加。虽然日本从中国或俄罗斯购买，但随着在世界范围内展开争夺战，在日本国内回收利用铝的人气也日益高涨。很遗憾，美容业界的需求很低，所以铝制盒的采购成为了各厂家资材部的看点。
 
-*编辑：东京樱花团/知了知了
+■乙酸乙酯的快速增长
+
+不仅是手机壳，最近市场上明显增加的是蒸笼包装等铝制薄膜。在美容行业，还被用作替换洗发水容器、业务用容器、头发染发剂容器等。从铝制批发商的角度来看，如果是替换装洗发水和EV产业，就当作EV销售，这也不是不能理解的事情。乙酸乙酯的暴涨是最终的结果。一般情况下，这个名称比较陌生，但在业界被简称为“醋爱奇”，用途非常广泛。原来是菠萝原料的酯，经过化学变化最终成为塑料瓶原料或粘合剂。
+
+21年10月，根据化学工业日报的报道，“原料醋酸的亚洲市场情况急剧上升。在主产地中国，由于煤炭不足，江苏省等主要企业纷纷减产。”这样一来，在聚合物类树脂的材料和美容中也经常使用的铝膜的粘合中，使用乙酸乙酯，产品变得更加不足。
+
+考虑到环境问题，欢迎电动车和铝制品，并准备停止煤炭供应，但又因中共病毒（新冠病毒Covid-19）祸患而展开艰难的市场争夺战。另外，还有迪斯尼乐园的零食被消耗掉的物流问题。
+
+在“美丽”这样的文章中很难找到棱角。希望中日以及亚洲也能成为“祈求他人幸福”的美丽社会。
+
+信息来源： [宇宙とEVが美容業界に攻めてくる？　美しさにできることとは](https://news.yahoo.co.jp/articles/609656de778378825652de664a92b74b7f3a44c3)
+
+*校对：东京樱花团/ kana2020
 发布：东京樱花团/平安卿卿*
 ![](https://assets.gnews.org/wp-content/uploads/2021/12/yht.jpg)
+
+
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
