--- a/gnews/12.md
+++ b/gnews/12.md
@@ -1,23 +1,35 @@
 ---
-title: 新冠患者的恶梦——注意力和记忆力下降
+title: 澳洲政府急迫解决新冠导致的工人短缺和长期失业问题
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1883021/)
+`走进澳洲` [轉載自GNews](https://gnews.org/zh-hans/1883142/)
 
-撰稿：东京樱花团/立正道
-![](https://assets.gnews.org/wp-content/uploads/2022/01/image-1544.png)图片来源于本文链接
-伦敦，19 日，路透社，英国牛津大学的一项研究表明，轻度中共病毒（新冠病毒Covid-19）患者在感染后6—9个月内注意力和记忆力下降，他们并没有意识到这是后遗症。
+#### 【雅典娜快讯】，紧贴时事脉搏
 
-一些人在感染后出现了“长期COVID”后遗症，其特点是认知问题里的注意力集中力欠佳、健忘、疲劳，目前尚不清楚这种注意力后遗症问题会持续多久。这项研究，是针对中共病毒检测阳性者，他们并没有抱怨自己有后遗症，只是进行了记忆力和认知能力的测查。
+整理/编辑：小红帽
+![](https://assets.gnews.org/wp-content/uploads/2022/01/f7f3817f4c8144fe-1.png)
+根据《澳大利亚人报中文网》1月20日报道，澳大利亚行业领袖与联邦政府就工人短缺问题举行了紧急会谈。当局数据显示，第一轮新冠病毒（Covid-19）封锁期间进入福利系统的20多万澳大利亚人至今仍依赖纳税人的支持。
 
-结果显示，在感染后长达6个月的情况下，回忆个人经历（称为情景记忆）的能力显著受损。此外，感染9个月后，保持注意力的能力明显低于未感染者。
+周二的会议旨在改善就业服务提供者和正在寻找员工的企业之间的联系，因为经济的关键领域目前因缺乏工人而陷入瘫痪。
 
-牛津大学实验心理学系Sijja Zhao博士说：“令人吃惊的是，被测试者并没有感觉到他们的注意力和记忆力下降了。”并且还说“经过数月后认知力的慢性影响才会显现出来。”
+《澳大利亚人报》透露，在2020年3月至5月的封锁高峰期，有713,000名澳大利亚人进入 Jobseeker 失业福利系统，其中近30%的人仍在接受政府的支持。
 
-信息来源：[コロナ軽症者、注意力や記憶力低下　後遺症の自覚なくても＝英研究](https://jp.reuters.com/article/health-coronavirus-britain-attention-idJPKBN2JT06E)
+到12月31日，有937,638人领取Jobseeker福利，失业率达到4.6%。
 
-*编辑：东京樱花团/知了知了
-发布：东京樱花团/平安卿卿*
-![](https://assets.gnews.org/wp-content/uploads/2021/12/yht.jpg)
+因此，总理Scott Morrison周三敦促外国学生和背包客 “现在就来”，以填补卫生、老年护理、农业、零售、酒店、食品和运输行业的短缺并决定免除这两类移民的签证费。
+
+Morrison先生表示需要大量外国工人涌入，以帮助澳大利亚度过由奥密克戎（Omicron）变种引起的供应链问题。
+
+新闻来源：[政府与行业危机会谈 致力解决工人短缺和长期失业问题](https://cn.theaustralian.com.au/2022/01/20/62620/)
+
+*发布：*Frank2021
+
+**更多资讯，请关注：****
+**[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
+[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
+[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
+[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/dKQ6vFY9Fu)
+[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
+
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
