--- a/gnews/27.md
+++ b/gnews/27.md
@@ -1,7 +1,7 @@
 ---
-title: 未来一千天对共产党的盖棺行动，以及明年两个最核心的问题
+title: 2023年中共将要面临的两大问题
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1882886/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1883020/)
 
 #### 编辑/整理：澳雅大直播工作组视频剪辑小队
 图片来源：雅典娜设计组
