--- a/gnews/35.md
+++ b/gnews/35.md
@@ -1,25 +1,27 @@
 ---
-title: 最高法院裁决后，通用电气暂停COVID-19疫苗要求
+title: 奥托·瓦姆比尔的家人获得24万多美元朝鲜扣押资产
 ---
-`洛杉矶盘古农场 HIMALAYA LA PANGU` [轉載自GNews](https://gnews.org/zh-hans/1882687/)
+`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/1882922/)
 
-据《路透社》作者：Rajesh Kumar Singh，2022年1月14日报道：
-![](https://assets.gnews.org/wp-content/uploads/2022/01/image-1533-e1642648763115.png)图片源自《路透社》
-芝加哥，1月14日（路透社）–通用电气公司周五表示，在美国最高法院作出裁决后，它已暂停对员工的COVID-19疫苗或测试要求。
+编译：文斗
+![](https://assets.gnews.org/wp-content/uploads/2022/01/图片1-120.png)
+合众国际社（UPI）19日报道。 2017年死亡的奥托·瓦姆比尔（Otto Warmbier）其家人收到超过24万美元的朝鲜扣押资产。
 
-法院周四阻止了乔·拜登总统对大型企业的COVID-19疫苗接种或测试要求——保守派法官认为这一政策对许多美国人的生活和健康造成了不适当的影响——同时认可了联邦对医疗机构疫苗的一个独立要求。
+沃姆比尔在2015年参加一个海外学习项目前往平壤，时年21岁。后来他在机场被捕，据称是因为在一家酒店偷了一张宣传海报，这被朝鲜认为是一种“反国家的敌对行为”。
 
-文章来源: [https://www.reuters.com/business/healthcare-pharmaceuticals/ge-suspends-covid-19-vaccine-or-test-requirement-after-us-supreme-courts-ruling-2022-01-14/](https://www.reuters.com/business/healthcare-pharmaceuticals/ge-suspends-covid-19-vaccine-or-test-requirement-after-us-supreme-courts-ruling-2022-01-14/)
+他被判处15年苦役，不久后陷入昏迷，后来在返回美国后死亡。
 
-翻译：洛杉矶盘古农场 – Mike Li
-校对：洛杉矶盘古农场 – Milojai
-编辑：洛杉矶盘古农场 – 柯镇恶
+奥托的父母就他们儿子的死亡起诉了朝鲜，2018年，美国哥伦比亚特区地方法院的贝里尔·A·豪威尔（Beryl A. Howell）法官裁定，朝鲜应承担5.01亿美元的赔偿责任。
 
+朝鲜无视这一命令。
 
-[![](https://assets.gnews.org/wp-content/uploads/2021/03/WhatsApp-Image-2021-06-26-at-22.05.30.jpeg)](https://discord.gg/2vuvRm7z6U)
-洛杉矶盘古农场欢迎您加入:(或点击上方图片）
+因为朝鲜及其银行未能对法院命令作出回应。之后，上周，纽约北区法院在一项动议中批准扣押北韩光鲜银行（Korea Kwangson Banking Corp）的资金，
 
-[https://discord.gg/2vuvRm7z6U](https://discord.gg/2vuvRm7z6U)
+法官下令在10天内将资金最终转给家属，奥托父母的长期法律斗争取得部分结果。
+
+奥托父母最初要求获得超过10亿美元的赔偿。
+
+新闻链接：https://www.upi.com/Top\_News/World-News/2022/01/19/Warmbier-family-awarded-240-over-death-son/7761642625993/
 
  
 
