--- a/gnews/32.md
+++ b/gnews/32.md
@@ -1,26 +1,25 @@
 ---
-title: 美高院很少见地发声明驳斥CNN/NPR关于口罩的假新闻
+title: NHK党党首立花在YouTube上发布NHK用户信息被判刑
 ---
-`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/1882963/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1882975/)
 
-翻译：  Evalu
-![](https://assets.gnews.org/wp-content/uploads/2022/01/图片3-30.png)
-图片来源：http://www.sinovision.net/
+撰稿：东京樱花团/待命（文晓）
+![](https://assets.gnews.org/wp-content/uploads/2022/01/image-1543.png)（图片源自本文链接）
+1月20日，东京地方法院以非法获取NHK观众的个人信息并在视频网站上公布，妨碍业务的罪名，判处“因违反《律师法》第72条与NHK对簿公堂”的党首立花孝志2年6个月监禁，缓期4年执行。
 
-零对冲网1月19日报道，美国高等法院周三在一项报道称法官索尼娅·索托马约尔在关于她在法院询事厅不与她的同事坐在一起是因为尼尔·戈萨奇法官拒绝戴口罩。索托马约尔和戈萨奇作出了回应：“ 报道说索托马约尔法官要求戈萨奇法官戴上口罩，这样的报道让我们惊奇，这是假的，我们有时候在法律上会有不同意见，但我们是友善的同事和朋友。”
+54岁的立花孝志被指控在2019年妨碍NHK的业务，在视频网站YouTube上发布了从NHK订阅费的收费公司前雇员那里非法获得的用户信息，并在互联网上发布视频，威胁已经退党的中央区议员：我要毁了你的人生。
 
-索托马约尔是奥巴马提名的法官，而戈萨奇是川普提名的，他们共同通过法院发言人向大纪元时报发布该声明。
+被告立花不认罪，他说：这是合法的言论活动、表达活动、政治活动和竞选活动，没有任何违法之处。检察院鉴于被告“只有不自然、不合理的借口，没有表现出悔意，再次犯罪的可能性很大”，诉求对其监禁两年零六个月。
 
-一篇报道来自美国国家广播电台，称法官约翰·罗伯特让其他法官戴上口罩，因为他理解索托马约尔希望大家戴上口罩才觉得放心，
+在今天的裁决中，东京地方法院判定是“以非法方式获取用户信息，公然将NHK工作人员当作人质，反复威胁，超出允许的政治活动范围”，判处他两年零六个月的监禁，缓刑四年。
 
-另一篇报道来自CNN，称索托马约尔离开询事厅是因为她对戈萨奇不戴口罩感到不舒服。
+NHK的正式名称是日本放送協会。笔者今天早上看到有民众自发演唱一首相关歌曲，歌名是【解体NHK之歌（之一）】歌词大意是：让传播向中国共产党的声音顶礼膜拜信息的NHK解体吧！把缴纳的放送费还给我们！
 
-当然不实信息同样也有来自法官，例如索托马约尔和另外二位法官在美国声称“有10万个儿童出现前所未有的严重感染症状，很多人用上了呼吸机“，而事实是，联邦数据显示只有3500例儿童患新冠住院，其中绝大多数是因为其他原因住院的。
+信息来源：[N党・立花党首に有罪判決 「人生潰しに行く」発言、NHK受信料契約者情報のYouTube投稿（TBS系（JNN）） – Yahoo!ニュース](https://news.yahoo.co.jp/articles/7ee6b2513e38615030f0a540d4cbc27109c5ade6)
 
-##### **新闻来源： **[Supreme Court Issues Rare Statement Refuting CNN/NPR ‘Fake News’ About Tension Over Masks](https://www.zerohedge.com/political/supreme-court-issues-rare-statement-refuting-cnnnpr-fake-news-about-tension-over-masks)
-
-# ** **
-
+*校对：东京樱花团/知了知了
+发布：东京樱花团/平安卿卿*
+![](https://assets.gnews.org/wp-content/uploads/2021/12/yht.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
