--- a/gnews/11.md
+++ b/gnews/11.md
@@ -1,7 +1,7 @@
 ---
-title: 未来信息科技技术
+title: 新中国联邦会保障战友们的财富
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1883148/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1883161/)
 
 #### 编辑/整理：澳雅大直播工作组视频剪辑小队
 图片来源：雅典娜设计组
