--- a/gnews/12.md
+++ b/gnews/12.md
@@ -1,34 +1,40 @@
 ---
-title: 澳洲政府急迫解决新冠导致的工人短缺和长期失业问题
+title: 疑偷盗技术 中共投资引FBI和投资委员会调查
 ---
-`走进澳洲` [轉載自GNews](https://gnews.org/zh-hans/1883142/)
+`GTV新闻访谈` [轉載自GNews](https://gnews.org/zh-hans/1883160/)
 
-#### 【雅典娜快讯】，紧贴时事脉搏
+撰稿：MOS- 柳是多水土透
+![](https://assets.gnews.org/wp-content/uploads/2022/01/image-40-1-8.png)
+1月18日，美国媒体透露，美国联邦调查局和外国投资委员会正在调查中共对一家飞机初创公司的投资，此前，有人指控该公司向中进行了不当技术转让。
+![](https://assets.gnews.org/wp-content/uploads/2022/01/image-1548.png)
+据悉，中共企业上海浦东科学技术投资公司，最初以小额投资入股了一家位于加州生产小型两栖飞机的企业，以规避美国外国投资委员会的审查监管。该企业生产的飞行器可被改造，用来生产军用无人机。
 
-整理/编辑：小红帽
-![](https://assets.gnews.org/wp-content/uploads/2022/01/f7f3817f4c8144fe-1.png)
-根据《澳大利亚人报中文网》1月20日报道，澳大利亚行业领袖与联邦政府就工人短缺问题举行了紧急会谈。当局数据显示，第一轮新冠病毒（Covid-19）封锁期间进入福利系统的20多万澳大利亚人至今仍依赖纳税人的支持。
+后来，中共企业逐步增资，至2017年成为该飞机企业的第一大股东。随后，它便以选举代理董事及任命经理人等方式向企业施压，要求将技术转移至中共国。
 
-周二的会议旨在改善就业服务提供者和正在寻找员工的企业之间的联系，因为经济的关键领域目前因缺乏工人而陷入瘫痪。
+2021年3月，第一架飞机被送至大陆。4月，公司开始知识产权转移，给予了中共“无限制吸收该技术的权利”。
 
-《澳大利亚人报》透露，在2020年3月至5月的封锁高峰期，有713,000名澳大利亚人进入 Jobseeker 失业福利系统，其中近30%的人仍在接受政府的支持。
+目前，美国联邦调查局和外国投资委员会尚未对该调查发表评论。
 
-到12月31日，有937,638人领取Jobseeker福利，失业率达到4.6%。
+链接：[Chinese Investment in U.S. Plane Maker Draws FBI, National-Security Reviews](https://www.wsj.com/articles/chinese-investment-in-u-s-plane-maker-draws-fbi-national-security-reviews-11642507206)
 
-因此，总理Scott Morrison周三敦促外国学生和背包客 “现在就来”，以填补卫生、老年护理、农业、零售、酒店、食品和运输行业的短缺并决定免除这两类移民的签证费。
+[中共对美航空企业投资引来FBI和国安调查](https://docs.google.com/document/d/1sD567DxtJ7FSgC5hsTTgji3zOciFesKOS22pScFR2ks/edit)
 
-Morrison先生表示需要大量外国工人涌入，以帮助澳大利亚度过由奥密克戎（Omicron）变种引起的供应链问题。
+![](https://assets.gnews.org/wp-content/uploads/2022/01/1-176.png)
 
-新闻来源：[政府与行业危机会谈 致力解决工人短缺和长期失业问题](https://cn.theaustralian.com.au/2022/01/20/62620/)
+总编：Jack Li文阳
 
-*发布：*Frank2021
+校正/发稿：浪迹天涯
 
-**更多资讯，请关注：****
-**[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
-[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
-[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
-[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/dKQ6vFY9Fu)
-[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
+**更多资讯，更多关注**
+[**纽约香草山农场GTV-香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
+[**纽约香草山农场GTV-MOS TALK 香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
+[**纽约香草山农场Gettr**](https://www.gettr.com/user/himalaya_mos)
+[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
+[**欢迎加入纽约香草山农场 Discord**](https://discord.gg/ChqXAHd)
+![](https://assets.gnews.org/wp-content/uploads/2022/01/image-40-1-8.png)
+
+
+
 
  
 
