--- a/gnews/33.md
+++ b/gnews/33.md
@@ -1,27 +1,25 @@
 ---
-title: 中共国就违反其法律的“任何言论 ”向奥运选手发出警告
+title: 美高院很少见地发声明驳斥CNN/NPR关于口罩的假新闻
 ---
-`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/1882959/)
+`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/1882963/)
 
-编译：花岗岩
-![](https://assets.gnews.org/wp-content/uploads/2022/01/图片2-49.png)
-图片来源：网络截图
+翻译：  Evalu
+![](https://assets.gnews.org/wp-content/uploads/2022/01/图片3-30.png)
+图片来源：http://www.sinovision.net/
 
-据零对冲1月19日报道，在西方媒体和隐私倡导者发出警告的同一周，鉴于北京为跟踪奥运运动员的健康数据而开发的新应用程序被发现有几个惊人的安全缺陷，那些带着个人智能手机参加北京冬奥会的运动员将使自己处于中共国国家监控之下，中共国高层官员向参赛的运动员发出警告。
+零对冲网1月19日报道，美国高等法院周三在一项报道称法官索尼娅·索托马约尔在关于她在法院询事厅不与她的同事坐在一起是因为尼尔·戈萨奇法官拒绝戴口罩。索托马约尔和戈萨奇作出了回应：“ 报道说索托马约尔法官要求戈萨奇法官戴上口罩，这样的报道让我们惊奇，这是假的，我们有时候在法律上会有不同意见，但我们是友善的同事和朋友。”
 
-《华盛顿邮报》在周三报道，北京奥组委官员杨舒在周二的新闻发布会上说：“任何符合奥运精神的言论，我相信都会受到保护。而任何行为或言论违背奥运精神，特别是违反中共国法律法规，也会受到一定的处罚”。
+索托马约尔是奥巴马提名的法官，而戈萨奇是川普提名的，他们共同通过法院发言人向大纪元时报发布该声明。
 
-该发言表示在2022年冬季奥运会上，外国运动员可能会因为违反中共国法律的言论而面临惩罚，这凸显了对中共国限制政治言论的担忧。这正如《华尔街日报》所解释的那样，在强调中共国将对任何违反其法律和法规的行为保持警惕时，人们担心，由于是在中共国的土地上，即将举行的这届运动会的执法将更加严格。
+一篇报道来自美国国家广播电台，称法官约翰·罗伯特让其他法官戴上口罩，因为他理解索托马约尔希望大家戴上口罩才觉得放心，
 
-尽管国际奥林匹克委员会（IOC）也坚持坚决禁止将奥运会变成政治抗议的场所，但中共国对其规则的表述似乎比国际奥委会的规则要严格一些，这让人怀疑中共国政府打算如何解释和执行它。国际奥委会章程第50条禁止在奥运场馆进行“示威或政治、宗教或种族宣传”。杨舒周二表示，“言论 ”可能会引用中共国法律，受到惩罚，其限制性远远高于许多国家。
+另一篇报道来自CNN，称索托马约尔离开询事厅是因为她对戈萨奇不戴口罩感到不舒服。
 
-人权组织也在同一时间发出声明，据报道，人权组织正忙于建议运动员需要注意他们的言论，以避免中共国法律的长臂和言论限制，包括可能在社交媒体上，最近网球明星彭帅有争议的短暂“失踪”事件印证了这点。
+当然不实信息同样也有来自法官，例如索托马约尔和另外二位法官在美国声称“有10万个儿童出现前所未有的严重感染症状，很多人用上了呼吸机“，而事实是，联邦数据显示只有3500例儿童患新冠住院，其中绝大多数是因为其他原因住院的。
 
-美国最近一直在游说允许运动员以“尊重 ”的方式强调全球人权问题。正如哥伦比亚广播公司所详述的，“根据国际奥委会的规定，在2月份的冬季奥运会期间，运动员在与记者交谈或在社交媒体上发帖时可以享有言论自由。然而，该委员会没有宣布任何措施来保护抗议的运动员免受中共国的迫害。”
+##### **新闻来源： **[Supreme Court Issues Rare Statement Refuting CNN/NPR ‘Fake News’ About Tension Over Masks](https://www.zerohedge.com/political/supreme-court-issues-rare-statement-refuting-cnnnpr-fake-news-about-tension-over-masks)
 
-然而，人权观察关于这一情况的声明描述给出答案，“我们知道中共国的人权记录和允许言论自由的情况，所以真的没有什么保护。”
-
-新闻来源：[China Warns Olympic Athletes Over “Any Speech” Contrary To Chinese Laws](https://www.zerohedge.com/political/china-warns-olympic-athletes-over-any-speech-contrary-chinese-laws)
+# ** **
 
  
 
