--- a/gnews/35.md
+++ b/gnews/35.md
@@ -1,27 +1,21 @@
 ---
-title: 奥托·瓦姆比尔的家人获得24万多美元朝鲜扣押资产
+title: 雅典娜时报-第179期
 ---
-`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/1882922/)
+`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/1882958/)
 
-编译：文斗
-![](https://assets.gnews.org/wp-content/uploads/2022/01/图片1-120.png)
-合众国际社（UPI）19日报道。 2017年死亡的奥托·瓦姆比尔（Otto Warmbier）其家人收到超过24万美元的朝鲜扣押资产。
+#### 《雅典娜时报》汇聚全球新闻时事
 
-沃姆比尔在2015年参加一个海外学习项目前往平壤，时年21岁。后来他在机场被捕，据称是因为在一家酒店偷了一张宣传海报，这被朝鲜认为是一种“反国家的敌对行为”。
+#### 编辑：精灵蓝
+排版：小蚂蚁614
+![圖片](https://media.discordapp.net/attachments/825592691433668612/933544346156933160/155_4.png?width=399&amp;height=594)![圖片](https://media.discordapp.net/attachments/825592691433668612/933544346576371772/155_5.png?width=399&amp;height=594)
+*发布：陶子*
 
-他被判处15年苦役，不久后陷入昏迷，后来在返回美国后死亡。
-
-奥托的父母就他们儿子的死亡起诉了朝鲜，2018年，美国哥伦比亚特区地方法院的贝里尔·A·豪威尔（Beryl A. Howell）法官裁定，朝鲜应承担5.01亿美元的赔偿责任。
-
-朝鲜无视这一命令。
-
-因为朝鲜及其银行未能对法院命令作出回应。之后，上周，纽约北区法院在一项动议中批准扣押北韩光鲜银行（Korea Kwangson Banking Corp）的资金，
-
-法官下令在10天内将资金最终转给家属，奥托父母的长期法律斗争取得部分结果。
-
-奥托父母最初要求获得超过10亿美元的赔偿。
-
-新闻链接：https://www.upi.com/Top\_News/World-News/2022/01/19/Warmbier-family-awarded-240-over-death-son/7761642625993/
+更多资讯，请关注：
+[澳大利亚墨尔本雅典娜农场Twitter：HimalayaAthena](https://twitter.com/HimalayaAthena1)
+[澳大利亚墨尔本农场Gettr：himalayaathena](http://gettr.com/user/himalayaathena)
+[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
+[澳大利亚墨尔本雅典娜农场Discord](http://xn--discord-cu4k86skkas5c126a4lez1be9fmukp34csc6a3e9m/)
+[澳大利亚墨尔本雅典娜农场GTV直播1台](http://gtv.org/user/5f72f8f60cd82c6bb6a248a6)
 
  
 
