--- a/gnews/5.md
+++ b/gnews/5.md
@@ -1,18 +1,16 @@
 ---
-title: 中国人不舍得为自己花钱
+title: 港闻速递｜下月中旬起 公务员必须接种疫苗 违者或面临纪律处分
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1883188/)
+`關注組` [轉載自GNews](https://gnews.org/zh-hans/1883200/)
 
-编辑/整理：澳雅大直播工作组视频剪辑小队
+**撰文/ 港台前线关注组｜发布日期/ 20/1/2022 **
+**更多资讯请关注官方盖特｜please follow our Gettr （[https://gettr.com/post/pl6w8he0b9](https://gettr.com/post/pl6w8he0b9))**
 
-*发布：*Frank2021
+《独媒》获得消息指，特区政府向公务员发送内部邮件，通知下月16日起，将收紧“疫苗气泡”的相关细节，要求所有政府雇员，除非持有有效的医生证明，证实身体状况的确不适宜打针，否则必须接种新冠疫苗，才可以进出政府大楼上班，违者将被视为“旷工”而面临纪律处分。
 
-**更多资讯，请关注：****
-**[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
-[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
-[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
-[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/dKQ6vFY9Fu)
-[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
+局方表示，目前，已有98%的政府雇员已接种过至少一针新冠疫苗，而是次内部邮件中的实施细则，涵盖范围包括公务员，非公务员合约雇员以及退休后返聘雇员，所有政府部门均须纪录员工的接种纪录，若有雇员拒绝配合，则被视为“拒绝执行部门指示”，亦会面临纪律处分。
+![](https://assets.gnews.org/wp-content/uploads/2022/01/下月中旬起-公務員必須接種疫苗-違者或面臨紀律處分.jpg)
+来源｜[獨媒](https://bit.ly/3GKBD2H)
 
  
 
