--- a/gnews/6.md
+++ b/gnews/6.md
@@ -1,35 +1,35 @@
 ---
-title: 宇宙和EV攻入美容业？如何变美？
+title: 美国以国家安全为由审查阿里巴巴云业务
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1883182/)
+`GTV新闻访谈` [轉載自GNews](https://gnews.org/zh-hans/1883198/)
 
-撰稿：东京樱花团/ haruka春香
-![](https://assets.gnews.org/wp-content/uploads/2022/01/image-1554.png)[图片来源](https://news.yahoo.co.jp/articles/609656de778378825652de664a92b74b7f3a44c3/images/000)
-虽说报纸已过时，但春节报纸整版广告对大企业来说无疑是重要的广告战略之一。 2022年，与伊藤忠、三井物产并列刊登了美容业巨头资生堂的广告。更何况背景是宇宙。在美容行业，业界首次大胆地利用科学和流行的最尖端宇宙，从红白室内眺望蓝色地球，再从地球向上的构图广告中，可以感受到新的美容可能性。登场的女性穿着与太空服截然不同的轻便服装，以“美就是祝愿人们幸福”的文体概括了整体内容。这是令人感动的新年广告。对单纯认为是宇宙时代的读者、女性、为未来着想的人也赋予了“美”的定义。
+撰稿人：纽约香草山教育部 – Naughty(文行)
+![](https://assets.gnews.org/wp-content/uploads/2022/01/image-40-1-8.png)
+1月18日，外媒称有知情人士透露，拜登政府正在审查中共电子商务巨头阿里巴巴的云业务，以确认它是否对美国国家安全构成风险。此次调查的重点是阿里巴巴如何存储美国客户的数据，包括个人信息和知识产权，以及中共政府是否可以访问这些数据。
+![](https://assets.gnews.org/wp-content/uploads/2022/01/image-1549.png)
+报道称，美国监管机构最终可能会选择强制该公司采取措施降低云业务带来的风险，或者禁止国内外美国人使用该服务。
 
-与宇宙开发并驾齐驱的经济界话题是电动汽车(EV)。作为未来的一大产业，值得关注。因为与自动驾驶有关，IT行业也非常关注。长途驾驶很累，特别是上了年纪，晚上或晚上的前景也不好。为了追求干净、安全、舒适的移动，迫切需要自动驾驶。
+对阿里巴巴云业务的调查是由美国商务部“情报和安全办公室”主导的。该办公室由川普政府创建，主要负责禁止或限制美国公司与来自中共国、俄罗斯、古巴、伊朗、朝鲜和委内瑞拉等“境外敌对”国家的互联网、电信和科技公司之间进行交易。
 
-■铝制品争夺战对美容造成影响？
 
-那么，这样的宇宙和EV的故事对美容行业也会产生影响，这可能是经济的趣味性、社会的复杂性。不管是宇宙化妆，还是EV广告中选美等，这些不是简单的事情都在幕后进行。
 
-回望工业，铝就成为叙事的核心。在日本，大部分用于机械和建材的工业用途，但在美容方面，铝罐、铝盒也很受欢迎，而且在脱塑料流程中，将塑料换成铝的商品也在增加。虽然日本从中国或俄罗斯购买，但随着在世界范围内展开争夺战，在日本国内回收利用铝的人气也日益高涨。很遗憾，美容业界的需求很低，所以铝制盒的采购成为了各厂家资材部的看点。
+总编/编辑：飞虹
 
-■乙酸乙酯的快速增长
+链接：
 
-不仅是手机壳，最近市场上明显增加的是蒸笼包装等铝制薄膜。在美容行业，还被用作替换洗发水容器、业务用容器、头发染发剂容器等。从铝制批发商的角度来看，如果是替换装洗发水和EV产业，就当作EV销售，这也不是不能理解的事情。乙酸乙酯的暴涨是最终的结果。一般情况下，这个名称比较陌生，但在业界被简称为“醋爱奇”，用途非常广泛。原来是菠萝原料的酯，经过化学变化最终成为塑料瓶原料或粘合剂。
+[Exclusive: U.S. examining Alibaba’s cloud unit for national security risks – sources](U.S.%20examining%20Alibaba's%20cloud%20unit%20for%20national%20security%20risks%20-%20sources)
 
-21年10月，根据化学工业日报的报道，“原料醋酸的亚洲市场情况急剧上升。在主产地中国，由于煤炭不足，江苏省等主要企业纷纷减产。”这样一来，在聚合物类树脂的材料和美容中也经常使用的铝膜的粘合中，使用乙酸乙酯，产品变得更加不足。
+![](https://assets.gnews.org/wp-content/uploads/2022/01/1-176.png)
 
-考虑到环境问题，欢迎电动车和铝制品，并准备停止煤炭供应，但又因中共病毒（新冠病毒Covid-19）祸患而展开艰难的市场争夺战。另外，还有迪斯尼乐园的零食被消耗掉的物流问题。
+校正/发稿：浪迹天涯
 
-在“美丽”这样的文章中很难找到棱角。希望中日以及亚洲也能成为“祈求他人幸福”的美丽社会。
-
-信息来源： [宇宙とEVが美容業界に攻めてくる？　美しさにできることとは](https://news.yahoo.co.jp/articles/609656de778378825652de664a92b74b7f3a44c3)
-
-*校对：东京樱花团/ kana2020
-发布：东京樱花团/平安卿卿*
-![](https://assets.gnews.org/wp-content/uploads/2021/12/yht.jpg)
+**更多资讯，更多关注**
+[**纽约香草山农场GTV-香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
+[**纽约香草山农场GTV-MOS TALK 香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
+[**纽约香草山农场Gettr**](https://www.gettr.com/user/himalaya_mos)
+[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
+[**欢迎加入纽约香草山农场 Discord**](https://discord.gg/ChqXAHd)
+![](https://assets.gnews.org/wp-content/uploads/2022/01/image-40-1-8.png)
 
 
  
