--- a/gnews/1.md
+++ b/gnews/1.md
@@ -1,7 +1,7 @@
 ---
-title: 中国人只会工作，不会享受生活
+title: 中国吃人还要吃骨头，还坚决不能吐
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1883284/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1883347/)
 
 编辑/整理：澳雅大直播工作组视频剪辑小队
 
