--- a/gnews/20.md
+++ b/gnews/20.md
@@ -1,7 +1,7 @@
 ---
-title: 社交媒体的两个核心
+title: 新中国联邦会保障战友们的财富
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1883082/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1883161/)
 
 #### 编辑/整理：澳雅大直播工作组视频剪辑小队
 图片来源：雅典娜设计组
