--- a/gnews/1.md
+++ b/gnews/1.md
@@ -1,7 +1,7 @@
 ---
-title: 習近平非常迷信
+title: 中国商人的德行
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1883404/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1883454/)
 
 编辑/整理：澳雅大直播工作组视频剪辑小队
 
