--- a/gnews/19.md
+++ b/gnews/19.md
@@ -1,7 +1,7 @@
 ---
-title: 共产党永远都相信是别人傻，死的都是别人孩子
+title: 習近平和彭丽媛的属相
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1883387/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1883424/)
 
 编辑/整理：澳雅大直播工作组视频剪辑小队
 
