--- a/gnews/4.md
+++ b/gnews/4.md
@@ -1,7 +1,7 @@
 ---
-title: 今年送棺材活动只送给施巫术的：习、王、孟、江
+title: 习近平独裁的伊始
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1883542/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1883600/)
 
 编辑/整理：澳雅大直播工作组视频剪辑小队
 
