--- a/gnews/8.md
+++ b/gnews/8.md
@@ -1,7 +1,7 @@
 ---
-title: 习彭与咱们斗法之年，鹿死谁手等着瞧
+title: 彭副主席上位的意义
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1883506/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1883558/)
 
 编辑/整理：澳雅大直播工作组视频剪辑小队
 
