--- a/gnews/17.md
+++ b/gnews/17.md
@@ -1,7 +1,7 @@
 ---
-title: 得中原佛手者得天下
+title: 今年送棺材活动只送给施巫术的：习、王、孟、江
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1883477/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1883542/)
 
 编辑/整理：澳雅大直播工作组视频剪辑小队
 
