--- a/gnews/7.md
+++ b/gnews/7.md
@@ -1,7 +1,7 @@
 ---
-title: 习近平彭丽媛出访挪威服装由七哥设计
+title: 无神论的共产党最迷信
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1883568/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1883647/)
 
 编辑/整理：澳雅大直播工作组视频剪辑小队
 
