--- a/gnews/13.md
+++ b/gnews/13.md
@@ -1,7 +1,7 @@
 ---
-title: 无神论的共产党最迷信
+title: 习的尴尬境地，及 七哥给孙正义投资马云的建议
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1883647/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1883851/)
 
 编辑/整理：澳雅大直播工作组视频剪辑小队
 
