--- a/gnews/15.md
+++ b/gnews/15.md
@@ -1,7 +1,7 @@
 ---
-title: 习近平的政治婚姻
+title: 金家女人，越单纯越疯狂
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1883621/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1883795/)
 
 编辑/整理：澳雅大直播工作组视频剪辑小队
 
