--- a/gnews/11.md
+++ b/gnews/11.md
@@ -1,7 +1,7 @@
 ---
-title: 七哥对企业的判断
+title: 迷信是对死亡的恐惧
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1883863/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1883874/)
 
 编辑/整理：澳雅大直播工作组视频剪辑小队
 
