--- a/gnews/14.md
+++ b/gnews/14.md
@@ -1,7 +1,7 @@
 ---
-title: 习身边彭蕾的地位，一人之下万人之上
+title: 习的尴尬境地，及 七哥给孙正义投资马云的建议
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1883826/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1883851/)
 
 编辑/整理：澳雅大直播工作组视频剪辑小队
 
