--- a/gnews/17.md
+++ b/gnews/17.md
@@ -1,7 +1,7 @@
 ---
-title: 习的尴尬境地，及 七哥给孙正义投资马云的建议
+title: 七哥对企业的判断
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1883851/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1883863/)
 
 编辑/整理：澳雅大直播工作组视频剪辑小队
 
