--- a/gnews/17.md
+++ b/gnews/17.md
@@ -1,7 +1,7 @@
 ---
-title: 七哥对企业的判断
+title: 战友的改变，共产党的迷信
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1883863/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1883917/)
 
 编辑/整理：澳雅大直播工作组视频剪辑小队
 
