--- a/gnews/23.md
+++ b/gnews/23.md
@@ -1,7 +1,7 @@
 ---
-title: 施巫术之人最后将被巫术给灭掉
+title: 迷信是对死亡的恐惧
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1883781/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1883874/)
 
 编辑/整理：澳雅大直播工作组视频剪辑小队
 
