--- a/gnews/3.md
+++ b/gnews/3.md
@@ -1,7 +1,11 @@
 ---
-title: Hcoin to the moon 这首歌，对共产党就像敲响丧钟一样
+title: 达沃斯之战是黑暗与阳光之战
 ---
-`G-NEWS TAIWAN` [轉載自GNews](https://gnews.org/zh-hans/1884028/)
+`G-NEWS TAIWAN` [轉載自GNews](https://gnews.org/zh-hans/1884120/)
+
+台灣寶島農場
+
+ 
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
 
