--- a/gnews/6.md
+++ b/gnews/6.md
@@ -1,7 +1,7 @@
 ---
-title: 共产党的溢出效应
+title: 爆料革命和国际社会合作有了一最大的进步
 ---
-`G-NEWS TAIWAN` [轉載自GNews](https://gnews.org/zh-hans/1884071/)
+`G-NEWS TAIWAN` [轉載自GNews](https://gnews.org/zh-hans/1884190/)
 
 台灣寶島農場
 
