--- a/gnews/44.md
+++ b/gnews/44.md
@@ -1,7 +1,7 @@
 ---
-title: 迷信是对死亡的恐惧
+title: 战友的改变，共产党的迷信
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1883874/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1883917/)
 
 编辑/整理：澳雅大直播工作组视频剪辑小队
 
