--- a/gnews/11.md
+++ b/gnews/11.md
@@ -1,7 +1,7 @@
 ---
-title: 强制打疫苗一定会被停
+title: 大重启尽义务不求果
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1887155/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1887260/)
 
 编辑/整理：澳雅大直播工作组视频剪辑小队
 
