--- a/gnews/7.md
+++ b/gnews/7.md
@@ -1,7 +1,7 @@
 ---
-title: 黑暗势力说打新冠疫苗不会有事，这是一派胡言
+title: 注射疫苗后，免疫力将土崩瓦解
 ---
-`G-NEWS TAIWAN` [轉載自GNews](https://gnews.org/zh-hans/1888899/)
+`G-NEWS TAIWAN` [轉載自GNews](https://gnews.org/zh-hans/1888998/)
 
 台灣寶島農場
 
