--- a/gnews/19.md
+++ b/gnews/19.md
@@ -1,7 +1,7 @@
 ---
-title: 音乐与灭共
+title: 音乐的传染性及干扰性
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1892320/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1892372/)
 
 #### 编辑/整理：澳雅大直播工作组视频剪辑小队
 图片来源：雅典娜设计组
