--- a/gnews/26.md
+++ b/gnews/26.md
@@ -1,7 +1,7 @@
 ---
-title: 最好的安全就是大家彼此相信
+title: 别人拿发糕七哥拿发糕票粮票，钱票
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1893025/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1893056/)
 
 #### 编辑/整理：澳雅大直播工作组视频剪辑小队
 图片来源：雅典娜设计组
