--- a/gnews/23.md
+++ b/gnews/23.md
@@ -1,7 +1,7 @@
 ---
-title: 得过冠状病毒的声明（二）
+title: 陈凯歌就是垃圾
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1893158/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1893227/)
 
 #### 编辑/整理：澳雅大直播工作组视频剪辑小队
 图片来源：雅典娜设计组
@@ -9,8 +9,6 @@ title: 得过冠状病毒的声明（二）
 ```
 发布：陶子更多资讯，请关注：澳大利亚墨尔本雅典娜农场Twitter：HimalayaAthena澳大利亚墨尔本农场Gettr：himalayaathena澳大利亚墨尔本雅典娜农场YouTube澳大利亚墨尔本雅典娜农场Discord澳大利亚墨尔本雅典娜农场GTV直播1台
 ```
-
-
 
 
  
