--- a/gnews/21.md
+++ b/gnews/21.md
@@ -1,7 +1,7 @@
 ---
-title: 全球通涨通缩滞涨并存
+title: 做好5～10年 甚至更长时间的经济准备
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1893289/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1893379/)
 
 #### 编辑/整理：澳雅大直播工作组视频剪辑小队
 图片来源：雅典娜设计组
@@ -9,8 +9,6 @@ title: 全球通涨通缩滞涨并存
 ```
 发布：陶子更多资讯，请关注：澳大利亚墨尔本雅典娜农场Twitter：HimalayaAthena澳大利亚墨尔本农场Gettr：himalayaathena澳大利亚墨尔本雅典娜农场YouTube澳大利亚墨尔本雅典娜农场Discord澳大利亚墨尔本雅典娜农场GTV直播1台
 ```
-
-
 
 
  
