--- a/gnews/20.md
+++ b/gnews/20.md
@@ -1,11 +1,11 @@
 ---
-title: 卢森堡-金融界的梵蒂冈 相信病毒是中共制造的生化武器
+title: 达沃斯是黑暗的力量
 ---
-`波士顿五月花农场` [轉載自GNews](https://gnews.org/zh-hans/1894230/)
+`波士顿五月花农场` [轉載自GNews](https://gnews.org/zh-hans/1894268/)
 
 #### 设计：波士顿五月花 水涨船高
 
-![](https://assets.gnews.org/wp-content/uploads/2022/01/卢森堡-金融界的梵蒂冈-相信病毒是中共制造的生化武器.jpg)
+![](https://assets.gnews.org/wp-content/uploads/2022/01/达沃斯是黑暗的力量.jpg)
 
 * * *
 
