--- a/gnews/14.md
+++ b/gnews/14.md
@@ -1,9 +1,9 @@
 ---
-title: 1/21/2022 文贵直播：《新中国联邦宣言》体现出我们的价值和追求跟西方社会是一致的
+title: 艺术可以成为我们共同的语言
 ---
-`秘密翻译组-北美组` [轉載自GNews](https://gnews.org/zh-hans/1894994/)
+`G-NEWS TAIWAN` [轉載自GNews](https://gnews.org/zh-hans/1895141/)
 
-秘密翻译组-北美组
+台灣寶島農場
 
  
 
