--- a/gnews/3.md
+++ b/gnews/3.md
@@ -1,7 +1,7 @@
 ---
-title: 艺术可以成为我们共同的语言
+title: 中共对艾司摩尔公司的渗透破功
 ---
-`G-NEWS TAIWAN` [轉載自GNews](https://gnews.org/zh-hans/1895141/)
+`G-NEWS TAIWAN` [轉載自GNews](https://gnews.org/zh-hans/1895325/)
 
 台灣寶島農場
 
