--- a/gnews/8.md
+++ b/gnews/8.md
@@ -1,7 +1,7 @@
 ---
-title: 美国派遣航空母舰到日本
+title: 冬奥会和中共政权暴政
 ---
-`G-NEWS TAIWAN` [轉載自GNews](https://gnews.org/zh-hans/1895386/)
+`G-NEWS TAIWAN` [轉載自GNews](https://gnews.org/zh-hans/1895409/)
 
 台灣寶島農場
 
