--- a/gnews/1.md
+++ b/gnews/1.md
@@ -1,7 +1,7 @@
 ---
-title: 习对王歧山霸占的金融界的异像早有察觉
+title: 共产党对中国民族带来的伤害
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1896073/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1896125/)
 
 #### 编辑/整理：澳雅大直播工作组视频剪辑小队
 图片来源：雅典娜设计组
