--- a/gnews/12.md
+++ b/gnews/12.md
@@ -1,7 +1,7 @@
 ---
-title: 七哥什么时候盯上王歧山的
+title: 参加奥运会的运动员会不会得病怎么宣传（二）
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1896098/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1896175/)
 
 #### 编辑/整理：澳雅大直播工作组视频剪辑小队
 图片来源：雅典娜设计组
