--- a/gnews/22.md
+++ b/gnews/22.md
@@ -1,7 +1,7 @@
 ---
-title: 共产党对中国民族带来的伤害
+title: 共产党的政治金融骗局
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1896125/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1896140/)
 
 #### 编辑/整理：澳雅大直播工作组视频剪辑小队
 图片来源：雅典娜设计组
