--- a/gnews/21.md
+++ b/gnews/21.md
@@ -1,7 +1,7 @@
 ---
-title: 参加奥运会的运动员会不会得病怎么宣传（一）
+title: 参加奥运会的运动员会不会得病怎么宣传（三）
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1896160/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1896225/)
 
 #### 编辑/整理：澳雅大直播工作组视频剪辑小队
 图片来源：雅典娜设计组
