--- a/gnews/16.md
+++ b/gnews/16.md
@@ -1,7 +1,7 @@
 ---
-title: 共产党必死的三点原因
+title: 冬奥会的剧本已被共产党写好
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1896319/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1896398/)
 
 #### 编辑/整理：澳雅大直播工作组视频剪辑小队
 图片来源：雅典娜设计组
