--- a/gnews/11.md
+++ b/gnews/11.md
@@ -1,31 +1,32 @@
 ---
-title: 众议员迈克尔·麦考尔预测俄罗斯2月份入侵乌克兰
+title: 2022/01/21 墙内世界
 ---
-`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/1897518/)
+`英國倫敦喜莊園 Himalaya London Club UK` [轉載自GNews](https://gnews.org/zh-hans/1897582/)
 
-#### 撰稿：彩虹
+1. 1月20日，深圳笋岗田心村，爆发群体性事件！群众冲击防控封锁线！齐喊解封！有人被抓走！
+2. 1月20日，西安雁塔区华城国际小区，被封35天，业主只能买物业卖的高价菜！业主下楼讨说法，被警察暴打！业主们联合起来反抗，齐喊放人！
+3. 1月18日，河南男子核酸检测47.5小时后上高速，到了目的地却因核酸检测超过48小时过期被撵回，在高速徘徊。
+4. 1月19日，擅长制造社会矛盾的中共政府，又让新型硬核宣传标语产生，“疫情返乡，不孝之孙”。
+5. 1月16日，河南开封杞县，各地高速路口也是设卡拦截。从低风险区域到低风险区域，没有地方村里的证明不放行！
+6. 1月19日，河南开封兰考县，长途行驶的车辆因为要经过高风险区域，被防控部门贴上封条行驶途中禁止下车。
+7. 1月21日，湖南张家界。男子未出月子的老婆和20天的宝宝住在人员并不密集的农村也要被拉去集中隔离。
+8. 1月20日，江西九江。一名男子在驾驶途中，突发疾病死亡。
+9. 1月17日，四川什邡抢劫枪击刑事案件监控曝光。
+10. 1月18日，河南许昌。建筑单位项目经理威胁来讨薪的农名工，并放狠话：“你玩的过中建二局(中共央企)吗？”
+11. 1月20日，网传江苏睢宁一养老机构工作人员殴打老人，老人不断发出哀嚎。
+12. 1月20日，江苏徐州。六岁视障女孩放假期间想为家里减轻负担，一天帮妈妈折千支纸盒。
 
-#### 校对：Chris
-![](https://assets.gnews.org/wp-content/uploads/2022/01/图片1-2-20.jpg)图片来源：The Telegraph
-1月22日，《新闻极限》引用福克斯新闻的报道，美国德克萨斯州联邦众议员迈克尔·麦考尔（Michael McCaul）周五援引美国情报说，弗拉基米尔·普京（Vladimir Putin）总统正在关注一个“非常激进的时间表”，他预测俄罗斯军队将于下个月内入侵乌克兰。
 
-麦考尔在众议院外交事务委员会中排名第一，他在给福克斯的一份声明中说，对于拜登政府面对俄罗斯在该地区的侵略行为的反应，他极不认同。
+* * *
 
-他认为，“解决俄罗斯侵略的关键是威慑。本届政府在阻止俄罗斯进一步入侵乌克兰方面做得太少了。这就是为何我提出了《卫士法案》（GUARD Act）。这项法案加快了对乌克兰大量额外关键援助，并立刻制裁普京的影响恶劣的项目：北溪2号管道”。
+- [点击阅读英国伦敦喜庄园在G-News 的更多精彩文章](https://gnews.org/zh-hans/author/himalaya_hawk/)
+- [点击观看英国伦敦喜庄园在G-TV的精彩视频](https://gtv.org/web/#/UserInfo/5ee680a45bd6f123dd104807)
+- [欢迎加入【英国伦敦喜庄园】Discord官方群](https://discord.gg/VsNaHaMUsy)
 
-他进一步强调指出：“当基辅位于可能是二战以来最大冲突的中心时，缓慢地提供这种类型的援助和支持是绝对不可接受的”。
 
-据福克斯新闻报道，众议院目前正在推进由外交委员会主席格雷戈里·米克斯（Gregory Meeks）撰写的立法，以制裁俄罗斯并授权向乌克兰提供5亿美元的补充性紧急安全援助。
+编辑：【英国伦敦喜庄园编辑部】
 
-另外，周六，美国驻乌克兰基辅大使馆宣布，为乌克兰军队提供的2亿美元“安全援助”计划的一部分已于当天清晨抵达该国。美国大使馆在脸书（FaceBook）上发文说：“这笔捐款包括近20万磅的关键性安全援助，包括为乌克兰前线保卫者提供的弹药，显示了美国对乌克兰主权自卫权的坚定承诺”。
-
-大使馆指出，在过去的一年里，美国向乌克兰承诺了超过6.5亿美元的安全援助，自2014年以来超过27亿美元。
-
-**新闻来源**
-
-[GOP Leader Predicts Russia Will Invade Ukraine ‘in the Next Month’](https://www.newsmax.com/politics/russia-ukraine-foreign-policy-war/2022/01/21/id/1053502/)
-
-[Part of US military support package arrives in Ukraine](https://thehill.com/homenews/administration/590893-part-of-us-military-support-package-arrives-in-ukraine)
+![](https://assets.gnews.org/wp-content/uploads/2021/08/41bf97c0-3bb2-4a07-ad75-91b96dc3203c.jpg)
 
  
 
