--- a/gnews/1.md
+++ b/gnews/1.md
@@ -1,84 +1,33 @@
 ---
-title: 新罕州寻求将伊维菌素作为法定COVID替代疗法
+title: 1.21大直播后记:七哥谈G系列投资
 ---
-`西班牙巴塞罗那喜悦农场` [轉載自GNews](https://gnews.org/zh-hans/1897658/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1897727/)
 
-**翻译：Lulumi**
+整理：雅典娜速记组
+编辑：小红帽
 
-![](https://assets.gnews.org/wp-content/uploads/2022/01/image-1856.png)图片来源 **：**theepochtimes.com
+- ![](https://assets.gnews.org/wp-content/uploads/2022/01/b601590bfa66f888.png)图片来源：雅典娜设计组
 
-美国食品和药物管理局警告不要服用伊维菌素治疗COVID-19，因为它是“马用药物”。然而，人用药包装的伊维菌素（如图）几十年来一直被广泛用于治疗一系列疾病，包括治疗虱子、其他寄生虫和病毒。(Natasha Holt/大纪元时报)
 
-新罕布什尔州将成为美国第一个将伊维菌素作为非处方药的州，并根据众议院卫生、公众服务和老人事务委员会的一项法案，批准它作为治疗中共病毒COVID-19的受保护的治疗方法。
+我们让战友可以从少变成多，变成更多。但是，从没有变成有的，是躺平币。躺平币是让你从没有变成有，变成富翁，变成更有钱。
 
-虽然其他三个州提出的类似法案反响不佳，但新罕布什尔州法案的主要发起人告诉《大纪元时报》，她希望稍加修正的版本能够获得共和党多数派委员会的足够票数，将其提交给共和党控制的众议院批准。
+另外一个就是现在投资的方式：Gclub–它是一个未来的身份和新中国联邦各种获得利益，（就）像马上召开的200万的大抽奖，每年都有惊喜；未来有各种特殊的照顾和利益，包括获得护照。它是一个这样的投资方式。那么另外一个就是GTV的投资，它是一个控股公司。通过GTV投资，你将拥有横向的各种的有利益的G系列的投资，它是非常非常重要的。另外一个Gfashion，它是你的，一个可以占便宜的，是一个利益，是个给予。Gfashion（做）到这个程度，大家想想这是多么的了不起! 然后，大家看到我们未来有很多投资的机会，像这个数字银行，你没有机会投。像Gclub、GTV、喜币，前面走了几步的人他就应该多得到。
 
-众议院已经对其他与中共病毒COVID有关的法案表示支持，包括全州范围内禁止政府和私人实施与中共病毒有关的强制措施。
+那么战友们说，我都不行，那我咋办？你现在可以在2级市场买币，在2级市场买的币，买卖操作进出都是完全自由的没有任何限制。我们所有的就是基于当时的获得福利币，战友之间互相的契约要兑现诺言，有这个约束。那么战友们，你多少钱都可以去买这个喜币。你买喜币的话，只要在2级市场买到，你就可以赚钱。还有一个就是未来（的）躺平币，躺平币使用即金钱，会从没有变成有，变成更多，从多有变成永恒，变成让你从横向、纵向，变得丰富，这就是大家要做的选择。所以说，问题很简单，你不能说既不付出时间，也不承担责任，也没有风险，你就什么都有，那是不可能的。不说新中国联邦，新新中国联盟也做不到。所以，战友们，承担风险，承担责任，共同的信仰，共同的未来，共同的利益，它是一个必要的因素。你承担的越多，你做的越多，你得到的越多，这就是我们建立的一个相对公平的新中国联邦。
 
-州共和党众议员利亚·库什曼也是一名注册护士，她向《大纪元时报》介绍了她提出的HB3005法案：“如果人用等级的伊维菌素能够提供给COVID患者，我绝对毫不怀疑它能够挽救生命。”
+还有追求一个最重要的事情，我们中国人别把自己活得跟猪狗似的，一辈子就是吃了睡、睡了吃，然后死掉拉倒。我们要变成有尊严有价值的人，有信仰自由的人，司法独立，一人一票选出的政府；然后，让我们尊重天地，尊重大自然；让人和人之间，像人的关系；人和畜生的之间的关系，应该是人要尊重畜生，而不是把它虐待死。而且，人要知道自己是有主人的。我们是来自于地球之外的，我们主人的力量，我们叫做超自然的力量，也可以叫大自然的力量。我们绝对不是猴变的。猴是谁变的呀？是不是？胡说八道的事儿！现在我们在追求正义和真相的同时，就会找到自己！我相信人是不生不灭的，人生就是一场黄粱梦，但你梦中醒来的时候，你是躺在床上。你别梦醒的时候自己睡在洗手间里边！你作恶太多，你醒不来。你醒来的（时候）是在毛屎坑里面！你可能醒来是在蛇堆里边！所以你不要做恶！做好梦、做噩梦完全是不同的体会。
 
-一名医生说“危险”
+共产党,习近平，从1913年的中国共产党乌托邦到达中国，中国人做的都是噩梦！而新中国联邦人做的是一个在梦中有双休、有流水、有欢乐、有摸胸，还有金钱、馒头、蛋糕，快乐的、健康的、愉悦的梦。你醒来会躺在软软的床上，微微的(出）汗，让你很舒服，而不是在毛屎坑里醒来和在蛇洞里醒来。这就是我们新中国联邦！
 
-但达特茅斯·希区柯克医疗中心的大卫·莱文博士说，开出伊维菌素“很危险，完全不符合全世界的医疗标准”。
+*发布：tianzhihuan*
 
-“我绝不希望开这种药给我自己或我家人，并对任何向我的亲人推荐这种药的人采取法律行动，”莱文在他关于该法案的书面证词中写道。
+**更多资讯，请关注：**
+[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
+[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：Himalayaathena
+[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
+[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/KQQVvwBNvm)
+[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
 
-美国医师协会新罕布什尔州分会会长威廉·帕尔默博士也提交了关于该法案的书面证词，他说他担心如果该法案获得通过，将有可能使该州的医疗保健系统因“伊维菌素引起的副作用”而不堪重负。
-
-在其专业领域内发表过600多篇同行评审论文的神经重症监护医生保罗·马瑞克博士作证说，伊维菌素“是这个星球上最安全的药物之一”。
-
-据马瑞克说，人用级别的伊维菌素在79个国家被批准用于治疗病毒。
-
-玛瑞克引用世界卫生组织自己的数据指出，自从1987年发现伊维菌素作为一种抗寄生虫药物以来，已经向人类发放了37亿剂。
-
-“所以日本人、印度人、巴西人可以安全地使用，但对美国人来说却有毒。你一定是在开玩笑。”马瑞克说。
-
-玛瑞克是由医生组成的倡导团体前线COVID-19重症监护联盟（FLCCC）的联合创始人，最近他辞去了在东弗吉尼亚医学院的职务，因为他与医院就用伊维菌素和其他替代药物治疗COVID患者进行了法律斗争。
-
-他因推广其他疾病的替代疗法而面临医疗许可委员会的惩戒。
-
-另一名医生说“成功”
-
-马瑞克在他的证词中引用了几项研究，他说这些研究明确地证明了伊维菌素具有病毒和抗炎的特性，而且它已经被成功地用于治疗致命的疾病，如蚊子传播的寨卡病毒和其他与引起COVID-19的SARS-CoV-2 RNA病毒类似的病毒。
-
-《新英格兰医学杂志》最近发表了一项研究，题为“伊维菌素在预防和治疗COVID-19中的有效性的新证据回顾”。
-
-马瑞克说： “（伊维菌素）能杀死病毒，所以任何关于它不能杀死病毒的假设都是虚假宣传。”
-
-库什曼告诉《大纪元时报》，为了平息一些对该法案的担忧，她已经提交了修正案，其中包括在任何供人使用的药房中说明它被认为是用于治疗COVID的“非标签”用途，并建立一个州级跟踪系统，记录任何服用人用伊维菌素的人所经历的不良反应。
-
-虽然已被美国和国外的一些科学研究确认为有效治疗COVID-19中共病毒的药物，但目前伊维菌素仅仅可作为动物的抗寄生虫治疗。
-
-为了获得药用级的伊维菌素，美国人必须从另一个国家的网上药店订购，或者从医生那里获得处方。
-
-其他地方引起的争论
-
-一些为COVID中共病毒患者开出伊维菌素处方的美国医生已经被吊销了执照或被停职。
-
-在佛罗里达州和亚利桑那州，两名COVID中共病毒患者在家属要求医院用伊维菌素为其治疗的法律诉讼中败诉后死亡。
-
-一项与新罕布什尔州提案类似的法案，最近在印第安纳州被提交给其主要由共和党人组成的卫生委员会，然而，该法案招致了该州医疗官员的大量批评，他们称之为危险的法案。
-
-印第安纳州药剂师协会副主席达伦·科温顿在反对该法案的书面证词中说：“该法案将开创一个危险的先例，让政府用自己的医疗建议取代受过训练的保健专业人员的建议。”
-
-威斯康星州的医生皮埃尔·科里是支持印第安纳州法案的少数人之一，他估计包括伊维菌素的治疗方法可以将中共病毒COVID-19的死亡人数减少约75%。
-
-10月，亚利桑那州共和党参议员凯利·汤赛德提出一项法案，禁止药剂师在公共卫生紧急情况下拒绝为伊维菌素的“非标签”用途配药。
-
-早些时候在宾夕法尼亚州，共和党议员道恩·基弗提出一项法案，允许医生开出伊维菌素以及硫酸羟氯喹的处方，用于治疗COVID-19中共病毒。
-
-这两项法案都还没有成功。
-
-在阿拉斯加，立法者已经讨论了将伊维菌素作为COVID治疗方法的法案的想法，但是到目前为止，在这个最后的边疆州还没有提出关于这个问题的法案。
-
-**素材链接：**[theepochtimes.com] [New Hampshire Seeks to Make Ivermectin an Alternative COVID Treatment Under Law](https://www.theepochtimes.com/new-hampshire-seeks-to-make-ivermectin-an-alternative-covid-treatment-under-law_4228066.html)
-
-* * *
-
-*审核：文乐
-校对：信心满满
-发稿：Nuevo唐人*
-![](https://assets.gnews.org/wp-content/uploads/2022/01/GNEWS_CH.-1-3-3.jpeg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
