--- a/gnews/12.md
+++ b/gnews/12.md
@@ -1,31 +1,21 @@
 ---
-title: 北京冬奥会开幕式惊现幼童，呈现邪教色彩
+title: 日本政府将启动一项免费“数字化”教育计划促再就业
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1897503/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1897581/)
 
-作者：东京樱花团｜捆绑CCP一千年
-![](https://lh4.googleusercontent.com/RiNq3qmuQj2vx-ftUNVIGq5FPwU5DOI_KDqmIkyp1FdKfmSIgUXGAGAJmAuAKFXqYb5yQuDxMqw2SS6Vsw31cbDpjgm70xfVA8gyfCpZo_zav9BDYbhLUbNHk77pevwqs-lcdxXv)[*图片来源*](https://p0.itc.cn/q_70/images03/20220123/754504d767624e20b6f89feba7ad74da.jpeg)
-**北京冬奥会开幕式不顾疫情扩散风险，如期在国家体育场彩排，却惊现“幼童表演”场面，这是为冬季奥运贴上“活人献祭”的标签吗？盛大歌颂形式实则隐晦地表达了邪教本质，因为你很难解释奥运会开幕式上要出现幼童、少女？从共产党昆仑山立祭坛可见一斑，因为它认为可以因此而获得国家力量永固，但中共一切政治基础皆建立在虚谎之上，正如北京冬季奥运临近前的两场人工降雪一样虚假。**
+撰稿：东京樱花团｜麗子
+![](https://lh3.googleusercontent.com/s47lO_p6lvk7wpS9047V9dyKgRWqP3EnncDHARQtBlKXlheFGZyNKPJyQjbYYXhhHLVd-zbjo-K2HPbtFFE67shH1tkLGs1UCAeCTLYo6NRzlUrSsOVC4JHfDeXXd75w5qM-Y10F)[*图片来源*](https://www.gmosign.com/media/wp-content/themes/agree/thumb.php?src=https://www.gmosign.com/media/wp-content/uploads/2020/08/20200807-a-03.jpg&amp;w=1200)
+1月23日据日本媒体报道，从2022年度开始，政府将为受中共病毒蔓延影响的非正式员工和失业人员启动一项教育计划，帮助他们获得数字领域的知识和技能。岸田内阁将“数字化”作为其增长战略的一个支柱，其目的是发展人力资源。
 
-据中共国新华社1月22日消息，奥密克戎在北京肆虐之际，北京冬奥会开幕式在国家体育场“鸟巢”彩排如期进行，并惊艳地出现幼童表演。这将是2008年奥运开幕式上上演“活人献祭”的升级版吗？
+据厚生劳动省称，因中共病毒影响而被解雇或停职的员工总数超过12万（包括将要失业人员）。 政府希望与当地企业和劳动人事局合作，支持这批人员掌握数字技术，为其就业或转职提供支援。
 
-稍有宗教常识的人们都知道，信徒在赞美上帝的同时通常将颂歌视为献给神的“馨香之祭”。中共国国家级盛大演出往往伴有《歌颂祖国》之类宗教化的场景，这种盛大歌唱形式实际上就是祭祀仪式的一种隐晦的表达。不然，你很难解释，为什么会在奥运会开幕式上要出现童男童女、少男少女们？且疫情正在北京及全国各地扩散之际，不担心群聚感染吗？冬奥会真的要出现“活人祭”吗？
+该计划将主要在全国大学和职业学校设置25处培训机构，预计约有750人参与。将免费提供信息安全知识和编程基础，并模拟在当地公司的工作场景。
 
-- ***延展阅读：***[***谁在抵制冬奥会？西方在抵制中共国方面努力寻找共同点***](https://www.politico.eu/article/boycott-winter-olympics-beijing-2022/)
+此外，为了对在职员工进行再教育，政府将启动一项计划帮助他们学习更多实用技术，如大数据分析、人工智能（AI）的深度学习以及“物联网”技术，并将在全国高校选择设置约10个基地。政府的目标是从2023年度起将这些项目扩展到全国高校及职业学校。
 
-![](https://lh6.googleusercontent.com/DeQ2fLeK39ZG0pDFlB7uCXX0nOG3NFTXncPCIuS7Pf3EUv-pjB5S4DN6ZUwFdyXUke9U3j9ZMwBQAyJakZWyE8jAi0sBX1MmhOVGm-1UFAAe-uLlb8bgZDoBGwRiMS9EhjiHVjk2)
-这并非危言耸听，因为中共国自毛泽东建政以来，就指望神灵来保佑他的权力，并拥有一支神秘的“[8341部队](https://www.163.com/dy/article/G4GA3MIT0543CDBN.html)”。在延续权力面前毫不吝啬地牺牲他的人民。了解中共国政治内幕的郭文贵（ MILES GUO ）先生透露，“喜马拉雅山脉有7770米的神峰和7座神山。”共产党为什不顾国内老百姓饿死人也要在昆仑山立祭坛？“中共昆仑山祭坛宏伟的像个大飞碟，整个天街就有999阶，所有的驻兵按属相排查，属虎属猪的不让去，因为昆仑山是共产党神秘的山。”（[29：12时段了解更多](https://gettr.com/post/pn8v876876)）他还认为昆仑山是整个地球的脊椎，因此中共相信拥有昆仑山就拥有世界的“权力”，并因“活人祭祀” 而获得国家力量永固。
+授之以鱼不如授之以渔。中共病毒持续蔓延，比起给各企业与个人支付各种补贴外，提供适应后疫情时代发展的实用课程显得更加意义重大，从长期看更有助于维持社会稳定、促进经济发展。
 
-- ***延展阅读：***[***中国聘请西方抖音用户在2022年冬奥会期间提升形象***](https://www.theguardian.com/world/2022/jan/22/china-hires-western-tiktokers-to-polish-its-image-during-2022-winter-olympics)
-
-
-根据中国文化，昆仑山还被中共视为神山另一个理由是因为那里有“黄帝的玉宫”（2008年奥运会，采集昆仑玉、镌刻“中国印”），他们认为追求权力永恒的必要途径就要敬拜西王母娘娘。而从帕米尔-喜马拉雅山脉的古老山地文化中“萨满教”崇拜仪式看其中童子和青少年作为祭祀的角色可见一斑。
-![](https://lh3.googleusercontent.com/FitbHyZcHjrHIdG83onjNoaIqOADXC9XmW9DFut-s9buAEL8Gfe6Iq3_TU1VfunTeSdJu_4foz-S6ap9Ww7RrhwNLXNleGYIYh9hnfoMQnRjFjYaILQa-Rjrj_sAVpp7Vzy86zg_)
-不仅这次北京冬奥会要用幼童和少男少女来歌颂他的政权，2008年的夏祭奥运会也是如此，从击打像祭坛一样的所谓[“中国尊”](https://youtu.be/TA0ZVxHRxCM)的童子恢弘表演场面看已经不言而喻。不过，[西方媒体](https://www.telegraph.co.uk/sport/olympics/2563786/Beijing-Olympics-Ethnic-children-revealed-as-fakes-in-opening-ceremony.html)普遍将56个民族的童男童女歌颂的场面指责其造假，因为共产党和新疆、西藏的关系紧张。
-
-中共政权为了追求完美而不惜代价，将其所有政治行为建立在虚谎之上，从北京冬季奥运临近前的两场人工“降雪”可见其造假程度已登峰造极。据一条“[北京人工降雪引非议](https://gzhy.blogspot.com/2009/11/zaobao.html?utm_source=twitterfeed&amp;utm_medium=twitter&amp;utm_campaign=Feed%3A+andyshow+%28Aristocratic+Scion%29)”消息透露，中国气象专家指出，“由于天空中存在太多不稳定因素，不应该过度依赖人工方式来催雨或催雪，没人能预知操控天气所带来的后果。”
-
-2022年1月23日
+信息来源：[**「コロナ失業」の労働者にデジタル教育、受講無料…就職・転職を後押し**](https://news.yahoo.co.jp/articles/ae2cb1fbf4d99a61fd18245cec19679a3247bd67)
 
 *校对：东京樱花团 / 東洋武士*
 *发布：东京樱花团 / 平安卿卿*
