--- a/gnews/2.md
+++ b/gnews/2.md
@@ -1,32 +1,31 @@
 ---
-title: Novavax疫苗在澳大利亚获得临时批准
+title: 1.21大直播后记:喜钱包（二）
 ---
-`澳喜特战旅Gnews` [轉載自GNews](https://gnews.org/zh-hans/1897647/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1897700/)
 
-撰稿：金生水
-![](https://assets.gnews.org/wp-content/uploads/2022/01/231.png)图片来自网络
-澳媒《6PR》近日报道，澳洲治疗用品管理局已批准 Novavax（音译：诺瓦瓦克斯）中共病毒疫苗的临时批准。
+整理：雅典娜速记组
+编辑：小红帽
 
-这是第一个在澳大利亚获得监管批准的蛋白中共病毒疫苗。
+- ![](https://assets.gnews.org/wp-content/uploads/2022/01/b601590bfa66f888.png)图片来源：雅典娜设计组
 
-要完全接种 Novavax，个人将需要接受两剂疫苗，相隔三周时间。
 
-它适用于 18 岁或以上的人接种。
+今天你以为我跟你谈数字货币（是）说着玩（的）？七哥不跟你玩点高的，哪能显出七哥的高啊。你看你今天做PPT都是炒冷饭，是吧？战友比你还明白.你不说，战友都明白。你把战友当孩子呢。服不服？政清冷钱包？
 
-该疫苗尚未获准用作加强针注射。
+今天我一听说政清要当主持人，那咱得跟主持人有点儿特长交流，是吧？你给郝海东先生当主持人，你讲讲流水的事儿，是吧？人家国内有战友跟我说：“7哥呀，你知道这个海东睡过的人太多了。”他说某个张姓女演员，亲自飞大连跟他睡觉啊。然后，这个女孩去昆仑酒店就跟他睡觉啊。（这个）张姓女演员超牛的啊。他说，那可了不得。海东睡过的女演员那比王岐山多多了。然后，我问，跟那什么冰有一腿吗？他说，那冰都被他“冰”过了，都是自愿的，还带吃带喝去冰的呀。所以我要跟东弟当主持人，我就谈流水的事。跟你就谈喜币。谈喜币咱有点儿杀手锏，就是热钱包、冷钱包。政清，你就热钱包、冷钱包没谈。你们没有任何人看到喜联储，还有咱们未来的躺平币。躺平币（的）下一步在中国没有人搞明白，战友使用盖特、GTV、Gnews即金钱。你在手机上呆了10个小时，就应该得到多少币自动就给你。
 
-澳洲目前主流城市12岁以上的人群两针接种率已经达到90%以上，而且停留在这一接种率已经有很长的时间，澳洲政府很难再向上推进哪怕是一个百分点。
+那我咋用呢，是吧？在福建武夷山养蛇的农民，武夷山养蛇的多，那我咋花呀？有这个喜支付，还有盖特支付，你可以在（这个）范围内一找，有（没）卖双修药的。你（在）这儿找到他，你就发信息–咱都是喜支付的人。对方认可了，找到了，就政清离我100公里，咱俩一对接就完了。我想买点包子，找找周围有没有，有的我接受，我就买了。为什么？天空Wifi已经脱离了当地的通信控制，你找不着我。第二个，我的数字货币是去中心化的货币，你也找不着人。第三，我有热钱包、冷钱包。很多商家准备了冷钱包。我下载完，我就放我冷钱包了。我有冷钱包，（那）我干啥去？我批发的双休药卖给你。我就拿冷钱包去批发，就是在共产党控制的范围内，我拿冷钱包玩，你找不着我了。但是，如果跟小额的（交易），我拿热钱包支付。我玩死它共产党。你认为老杂毛他能懂这个吗？ 懂这个的都给你杀了，都不让你活着。咱们就在电脑上这么玩死老杂毛。让你看着，我开你家门，我开你家保险箱，拿走你的钱，还让你找不着我。让共产党发现，哇塞，抓不着偷我钱的人，还有你藏钱的方式。那我（共产党）也想当这个人啊。我就把我的钱放到硬钱包去。
 
-通过笔者自己的观察发现，至今部分澳洲民众坚信新冠病毒最后会有疫苗，但不信任目前市面上的主流新冠疫苗（辉瑞、阿斯利康等）。因为这款新的新冠疫苗是采用的技术和主流新冠疫苗不同，而且这种所谓的新的中共病毒疫苗因为在其他国家施打的少，所以出现医疗事故的就少，给人感觉没有什么黑历史，因此他们对这款新的新冠疫苗抱有很大期待，苦苦等待澳洲政府的批准。
+当共产党王岐山、习近平家人相信，这个硬钱包谁也查不着，谁也找不着，谁也抢不走时候，给我们做最大贡献的就是习近平这老杂毛。你看张高丽，第一个就是给他老婆说，宇宙无限大，地球是一粒沙。谁也别相信，只相信郭文贵，把钱放那个硬钱包吧。肯定是这个，就相信郭文贵宇宙无限大。而且，这个在世界上，我们要买保险，我们要给硬钱包人买保险，比如说你有了10亿个币在你的硬钱包里，你丢了我赔你。你在这买保险。如果你被哪个政府强迫弄走了，我赔你。 你哪天晚上喝多了被小女孩给骗走了，我赔你。这就是喜保险和它的对应（服务），叫你永远安全不可找、不可抢、不可骗，永不丢，这就是热钱包、冷钱包。你用好了（它们）（将发挥）无穷无尽大的（作用）。
 
-而澳洲政府只批准了前两针，故意没有批准第三针加强针。可见一切都是被澳洲政府和达沃斯党们安排好的，希望借这一款新冠疫苗让澳洲的两针接种率无限接近于100%。同时借需要打加强针的人消耗主流新冠疫苗的库存，等到加强针的接种率推不动的时候再批准诺瓦瓦克斯用于加强针注射，最终想要达到的目的是赶在强打新冠疫苗政策被取消之前尽可能的让所有人接种，已经接种的就赶紧的打上三针，实在是邪恶至极。
+*发布：tianzhihuan*
 
-在一开始能够通过药物治疗解决的病症居然要通过静脉注射，可见一开始就走错了路，而澳洲政府和达沃斯党们心知肚明却没有及时刹车，而是带着无辜的老百姓们在这条错误的道路上越走越远。希望大家多多宣传关于这款刚被批准的新冠疫苗背后的阴谋，这已经是他们最后的疯狂，在这之前能救一个是一个。
+**更多资讯，请关注：**
+[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
+[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：Himalayaathena
+[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
+[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/KQQVvwBNvm)
+[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
 
-参考链接: [https://www.6pr.com.au/novavax-vaccine-granted-provisional-approval-in-australia/](https://www.6pr.com.au/novavax-vaccine-granted-provisional-approval-in-australia/)
-
-*发稿：mgjxs*
-![](https://assets.gnews.org/wp-content/uploads/2022/01/TUBIAO-X.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
