--- a/gnews/3.md
+++ b/gnews/3.md
@@ -1,34 +1,27 @@
 ---
-title: 中共紧盯俄乌冲突，或考虑奥运会后攻打台湾
+title: 政府能解释五岁的孩子在注射新冠疫苗一小时后死亡吗
 ---
-`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/1897634/)
+`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/1897685/)
 
-#### 【雅典娜快讯】，紧贴时代脉搏
+##### 翻译：奮鬥
+校对：枳实
+剪辑|字幕：Biggod
+编辑：Mttfly
 
-整理：Eileen（围剿维尼熊）
-编辑：5m
+要研发一种针对新发现的疾病的疫苗，最短的时间是大约7年，平均时间是20年。但是各国政府仅用了几个月的时间就研发并大规模的强制接种新冠疫苗。一位悉尼五岁的孩子在接种新冠疫苗一小时后就死亡，媒体和政府能够解释这种事情吗？为什么政府要把还处在试验阶段的疫苗对民众强制接种呢？
 
-- ![](https://assets.gnews.org/wp-content/uploads/2022/01/a1642929482655.jpg)图片来源：雅典娜设计组
+视频链接：[Media and Governments talked about COVID 19 – Five Year Old Dies One Hour After Jab. Why?](https://www.bitchute.com/video/27wDZKodz6eN/)
 
-
-根据大纪元报道：美国前国家安全顾问罗伯特‧奥布莱恩1月21日警告说，美国的敌手正在密切关注拜登和普京在乌克兰-俄罗斯冲突中的一举一动。如果中共认为值得攻打台湾，恐进一步威胁到美国领土。
-
-奥布莱恩说：“我们在欧洲主要国家安全利益在于确保北约得到捍卫，因此我们不希望俄罗斯对非北约朋友横行霸道，给我们的北约盟国带来更多压力。与此同时，中国正在仔细观察此事。习近平正在观察普京的一举一动，他在考虑是否在奥运会后攻打台湾的问题。”
-
-他指出，台湾关乎美国大量的国家安全和外交利益。如果台湾被中共控制，中共军队可能会在短时间内出现在美国的西部大门。
-
-奥布莱恩告诉福克斯新闻，中共入侵台湾也可能切断美日联盟，还可能切断美国与新西兰、澳大利亚和菲律宾的盟友关系。
-
-参考链接：[https://www.epochtimes.com/gb/22/1/22/n13522918.htm](https://www.epochtimes.com/gb/22/1/22/n13522918.htm)
-
-*发布：*tianzhihuan
-
-**更多资讯，请关注：
+*发布：Mttfly*
+**
+更多资讯，请关注：
 **[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
-[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：Himalayaathena
+[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
 [澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
 [澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/KQQVvwBNvm)
 [澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
+
+
 
  
 
