--- a/gnews/4.md
+++ b/gnews/4.md
@@ -1,33 +1,74 @@
 ---
-title: 中共病毒感染后对男性有影响吗？
+title: 以色列官员对疫苗不能阻止新冠传播表示非常惊讶和失望
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1897606/)
+`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/1897684/)
 
-撰稿：东京樱花团/立正道
-![](https://assets.gnews.org/wp-content/uploads/2022/01/image-1854.png)[图片来源](https://news.yahoo.co.jp/articles/d3d5f68e953a174a6b7c508a3cdc923d480ae9e9/images/000)
-中共病毒（新冠病毒Covid-19）感染后，引起“男性生殖器血栓”！伊朗医科大学报告一例。随着Omicron病毒肆虐全球，让男人们难以启耻的话题成了互联网上的热搜。
+#### 【雅典娜观察】和您一起探究世界
 
-正是福布斯杂志（20日）和纽约邮报（18日）报道的伊朗医科大学中共病毒患者病例报告，才让男人们一片哗然。一名已婚男子（41，岁）在性交时感到生殖器疼痛，3天后到泌尿科就诊。这时，疼痛已经从生殖器和肛门之间的“会阴”蔓延到大腿根部。
+翻译整理：月映万川
+编辑：文明明来了/文泓
 
-体检结果未显示皮肤组织变化、变色或水肿等异常情况，但超声波检查显示，生殖器后部的静脉中形成了血凝块。但是，该男子没有血尿或排尿困难等泌尿系统疾病史，也没有使用过收缩血管药物。
+- ![](https://assets.gnews.org/wp-content/uploads/2022/01/SI24_I9WRQYAPQL_9_L.png)图片来源：Aljazeera
 
-毕业于哈佛大学，拥有《前世界卫生组织专家委员会传染病预防书》等著作的医学博士左門新氏认为：“为什么这么疼，虽然我找不到任何我能想到的理由，但在三周前受到过中共病毒的感染。虽然症状相对较轻，例如发烧、咳嗽、肌肉酸痛和疲劳感等。但是这时生殖器可能已有血栓形成。”
 
-“这是首例因中共病毒感染导致阴茎静脉血栓的病例。众所周知，病毒会导致很多地方发生血栓，几乎没有阴茎发生血栓的病例。我们无法证明因果关系，但很可能是病毒感染所致。这个例子非常罕见的情况，你不必太担心。”
+以色列政府一位重要的疫苗政顾问透露，他和他的同事们对去年发生的（病毒传播）感到“惊讶”和“失望”，因为很明显，疫苗接种并不会阻止新冠病毒的传播。
 
-病例报告显示，该男子每两天服用一次抗凝剂，治疗两个月后，勃起时痛疼感消失。
+以色列政府疫苗咨询委员会成员、巴尔伊兰大学免疫学教授西里尔·科恩，周三在接受英国新闻网站无源（UnHerd）的采访时，发表了上述观点。
 
-也有生殖器缩小的例子。
+自2020年12月开始，拥有940万人口的以色列一直在推广新冠疫苗接种方面处在世界领先地位。
 
-剧烈疼痛并不是病毒对男性生殖器的唯一影响。 除了勃起。功能障碍的报道外，一位30多岁的美国人，他声称原来生殖器大于平均人而在感染后缩小了，并患有勃起功能障碍。另一方面，一名60多岁的法国人中共病毒重症后烦恼出现了“阴茎异常勃起”，持续勃起4个多小时。
+在2021年4月，辉瑞公司首席执行官阿尔伯特·布尔拉说，早期临床试验数据显示其疫苗“对新冠重症病患有100%的效果”。
 
-中共病毒感染不容小觑。
+“您之前是否期望疫苗在预防传播方面比目前的实际效果更好呢？”主持人弗雷迪·赛尔斯问科恩教授。
 
-信息来源：[コロナ感染が原因か…「男性器に血栓」の衝撃！ イラン医科大が症例報告](https://news.yahoo.co.jp/articles/d3d5f68e953a174a6b7c508a3cdc923d480ae9e9)
+“是的……特别是基于我们在3月和4月看到的情况，”他回答说。
 
-*编辑：东京樱花团/知了知了
-发布：东京樱花团/平安卿卿*
-![](https://assets.gnews.org/wp-content/uploads/2021/12/yht.jpg)
+“去年春天我们在以色列的感觉是，我们经历一个超过4000人死亡的致命1月，在三次封锁之后，突然我们开始开放，但是病例却在减少，医院变得空荡荡的。我不是在开玩笑，我的同事们，医生们高兴得在走廊里跳舞，他们（认为）这次大流行就此结束了。”
+
+“我们当时认为，疫苗也许在（被注射）后不久能防止传播病毒，但这一效果可能无法维持很长时间，但我们最后惊讶地发现，疫苗没有保护我们，也没有实现我们所期望的消除性免疫注1 。”
+
+很多国家的公共卫生官员们，包括澳大利亚的，现在开始宣称尽管疫苗没有阻断新冠病毒的传播，但是他们减轻了疾病的烈度，进而减轻了医院的负担。
+
+科恩教授也同意赛尔斯的观点，奥密克戎病毒的高传播性已经导致以色列的“绿色”疫苗通行证不在有任何实质意义。
+
+“我也倾向于这样认为，”他说，“虽然疫苗护照仍然存在，但是，随着人民反对的呼声越来越大，以及奥密克戎病例的不断飙升，目前现行的疫苗政策已经不可能继续执行下去了。”
+
+他说：“我们没有看到接种疫苗的人和未接种疫苗的人之间在抵御病毒感染上有什么区别，病毒在两个群体中的传播速度是一致的。”
+
+特拉维夫大学微生物学和免疫学负责人埃胡德·齐姆龙教授为N12新闻撰文，并公开呼吁以色列卫生部 “承认失败”。
+
+超过80%的以色列成年人现在已经接受了两剂新冠疫苗，超过一半的人已经接受了加强针的注射。
+
+以色列上个月宣布，他们打算开始推出疫苗第四针，以对抗奥密克戎的传播，尽管这一决策缺乏关于疫苗效果的科学依据。
+
+本周早些时候，以色列研究人员表示，对270名医疗工作者的早期研究数据表示，在接种第四针疫苗后，其仍然对奥密克戎病毒防护效果不佳。
+
+与此同时，周二发表在《柳叶刀》上的一项南非的研究，通过对接受过疫苗加强针的人群中第一例突破性感染案例的调查，得出的结论是mRNA疫苗的强化针未能阻止奥密克戎病毒。
+
+世界卫生组织公开呼吁制药公司要更新疫苗成分，并警告称，基于“重复注射原始疫苗”的战略是“不合理的且不可持续的。”
+
+辉瑞公司的布尔拉博士上周说，其目前的两剂新冠疫苗的对奥密克戎病毒提供 “非常有限的保护，如果这种保护存在的话”。但是三针疫苗可以“提供一定保护性，避免感染者入院或者死亡。”
+
+他说辉瑞正在研发针对奥密克戎病毒的疫苗，并目前计划在三月前上市。
+
+莫德纳也在开发升级版本的疫苗，并计划在今年晚些时候上市。
+
+“我们现在正在和全世界公共卫生的领导者讨论一个新策略，就是在2022年秋季推广未来的加强针。”莫德纳的首席执行官斯蒂芬·班赛（Stephane Bancel）对CNBC说到。“我们相信它就可以控制奥密克戎病毒”
+
+注1:消除性免疫 (sterilizing immunity)指的是身体在接受疫苗之后产生大量免疫细胞能够大量消灭病毒，进而阻断病毒在人群中的传播。相对应的是效果性免疫（effective immunity），人体并不能产生足够量的免疫细胞，导致虽然对自身有一定免疫效果，但却并不会对病毒传播产生阻断，也被称为自私的免疫。
+
+编者按：疫苗的推广原本追求的是阻断传播的利他效果，但如果疫苗只有有限的利己效果，则大面积推广疫苗的实际意义就是存疑的。
+
+原文链接： [Israeli officials were ‘surprised and disappointed’ vaccines did not stop transmission](https://www.news.com.au/technology/science/human-body/israeli-officials-were-surprised-and-disappointed-vaccines-did-not-stop-transmission/news-story/9c925c5c0f7ae3b2e645519b5bd0dce6)
+
+发布： *tianzhihuan*
+
+更多资讯，请关注：
+[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
+[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
+[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/76QVRChsgU)
+[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
+
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
