--- a/gnews/5.md
+++ b/gnews/5.md
@@ -1,32 +1,23 @@
 ---
-title: 2022/01/21 墙内世界
+title: 新冠病毒是实验室制造的
 ---
-`英國倫敦喜莊園 Himalaya London Club UK` [轉載自GNews](https://gnews.org/zh-hans/1897582/)
+`喜马拉雅-华盛顿DC农场` [轉載自GNews](https://gnews.org/zh-hans/1897683/)
 
-1. 1月20日，深圳笋岗田心村，爆发群体性事件！群众冲击防控封锁线！齐喊解封！有人被抓走！
-2. 1月20日，西安雁塔区华城国际小区，被封35天，业主只能买物业卖的高价菜！业主下楼讨说法，被警察暴打！业主们联合起来反抗，齐喊放人！
-3. 1月18日，河南男子核酸检测47.5小时后上高速，到了目的地却因核酸检测超过48小时过期被撵回，在高速徘徊。
-4. 1月19日，擅长制造社会矛盾的中共政府，又让新型硬核宣传标语产生，“疫情返乡，不孝之孙”。
-5. 1月16日，河南开封杞县，各地高速路口也是设卡拦截。从低风险区域到低风险区域，没有地方村里的证明不放行！
-6. 1月19日，河南开封兰考县，长途行驶的车辆因为要经过高风险区域，被防控部门贴上封条行驶途中禁止下车。
-7. 1月21日，湖南张家界。男子未出月子的老婆和20天的宝宝住在人员并不密集的农村也要被拉去集中隔离。
-8. 1月20日，江西九江。一名男子在驾驶途中，突发疾病死亡。
-9. 1月17日，四川什邡抢劫枪击刑事案件监控曝光。
-10. 1月18日，河南许昌。建筑单位项目经理威胁来讨薪的农名工，并放狠话：“你玩的过中建二局(中共央企)吗？”
-11. 1月20日，网传江苏睢宁一养老机构工作人员殴打老人，老人不断发出哀嚎。
-12. 1月20日，江苏徐州。六岁视障女孩放假期间想为家里减轻负担，一天帮妈妈折千支纸盒。
+我们越深入了解，发现越多的元素，这些元素看起来难以置信的危险。这种刺突蛋白是一种生物武器，是在实验室制造的，它的功能不像天然病毒。
 
+该疫苗的一部分。我们越深入了解，我们发现越多的元素。这些元素看起来难以置信的危险。如果不是完全致命的话，我们的调查告诉我们这种刺突蛋白是一种生物武器。它是在实验室制造的。它的功能不像天然病毒。
 
-* * *
+我想人们会这样说，哦，好吧。这是一种实验室制造的病毒，这是一种天然病毒，实验室制造，这有什么不同？这是一个巨大的差异。这是一个生化武器。这是有目的而设计的。这目的可能不会在自然界产生。
 
-- [点击阅读英国伦敦喜庄园在G-News 的更多精彩文章](https://gnews.org/zh-hans/author/himalaya_hawk/)
-- [点击观看英国伦敦喜庄园在G-TV的精彩视频](https://gtv.org/web/#/UserInfo/5ee680a45bd6f123dd104807)
-- [欢迎加入【英国伦敦喜庄园】Discord官方群](https://discord.gg/VsNaHaMUsy)
+还有一些属于高风险类别的人，病得令人难以置信，快死了。忘记我的意思。我们可以谈谈医院的弊端。你不会想靠近他们(医院)。他们(医院)不给你伊维菌素。他们不给你任何治疗。比如羟氯喹或布地奈德。所有可以挽救你生命的东西。他们让你戴上呼吸机。
 
+我们必须开始提出更难的问题。因为那是生化武器。这生化武器，你知道，被人吸入。他们正在给数十亿和数万亿的人注射这武器。你没有机会。你的身体没有机会。那个生化武器是如此多产，如此有穿透力，在你身体的每个细胞里。
 
-编辑：【英国伦敦喜庄园编辑部】
+如果你接种了疫苗。我真的认为我们即将看到有史以来最巨大的人类死亡之一。如果科学站得住脚。我祈祷我错了。我向上帝祈祷。我们的自然身体能以某种方式战胜所有这些人都被注射了生物武器的事实。
 
-![](https://assets.gnews.org/wp-content/uploads/2021/08/41bf97c0-3bb2-4a07-ad75-91b96dc3203c.jpg)
+但在动物试验中，我们看到那些动物死了。每一种冠状病毒疫苗都是失败的。
+
+视频剪辑/翻译: 三分 | 校对：烟波浩淼 | 视频制作+字幕： 三分 | 编辑&发布：闪电训练
 
  
 
