--- a/gnews/6.md
+++ b/gnews/6.md
@@ -1,25 +1,32 @@
 ---
-title: 日本政府将启动一项免费“数字化”教育计划促再就业
+title: 特讯军情：美国主导的北约太空政策
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1897581/)
+`澳喜特战旅Gnews` [轉載自GNews](https://gnews.org/zh-hans/1897682/)
 
-撰稿：东京樱花团｜麗子
-![](https://lh3.googleusercontent.com/s47lO_p6lvk7wpS9047V9dyKgRWqP3EnncDHARQtBlKXlheFGZyNKPJyQjbYYXhhHLVd-zbjo-K2HPbtFFE67shH1tkLGs1UCAeCTLYo6NRzlUrSsOVC4JHfDeXXd75w5qM-Y10F)[*图片来源*](https://www.gmosign.com/media/wp-content/themes/agree/thumb.php?src=https://www.gmosign.com/media/wp-content/uploads/2020/08/20200807-a-03.jpg&amp;w=1200)
-1月23日据日本媒体报道，从2022年度开始，政府将为受中共病毒蔓延影响的非正式员工和失业人员启动一项教育计划，帮助他们获得数字领域的知识和技能。岸田内阁将“数字化”作为其增长战略的一个支柱，其目的是发展人力资源。
+撰稿：望海潮
+![](https://assets.gnews.org/wp-content/uploads/2022/01/232-2.png)图片来自网络
+北约于2022年1 月 17 日发布了新的太空政策，将太空视为与陆海空网络并列的新“作战领域”，规定任何对盟友的天基攻击都将触发根据欧盟第 5 条制定的北约集体防御政策。
 
-据厚生劳动省称，因中共病毒影响而被解雇或停职的员工总数超过12万（包括将要失业人员）。 政府希望与当地企业和劳动人事局合作，支持这批人员掌握数字技术，为其就业或转职提供支援。
+根据北约的说法，太空正变得更加“拥挤和竞争”，卫星容易受到某些国家的干扰，包括俄罗斯、中（共）国、伊朗和朝鲜，这些国家已经开发和测试了广泛的反太空和反卫星技术（ASAT）。
 
-该计划将主要在全国大学和职业学校设置25处培训机构，预计约有750人参与。将免费提供信息安全知识和编程基础，并模拟在当地公司的工作场景。
+2021 年 11 月 15 日，俄罗斯摧毁了自己已报废的卫星，美国谴责该行动“故意无视太空领域的安全”，俄罗斯国防部指责华盛顿“虚伪”，并称美国空军对波音 X-37 轨道航天器的测试证明五角大楼在“积极开发”太空武器。
 
-此外，为了对在职员工进行再教育，政府将启动一项计划帮助他们学习更多实用技术，如大数据分析、人工智能（AI）的深度学习以及“物联网”技术，并将在全国高校选择设置约10个基地。政府的目标是从2023年度起将这些项目扩展到全国高校及职业学校。
+事实上美国拥有更多的反空间干扰以及 SM-3 和 GMD 导弹系统等反卫星武器，早在2008 年（ 2 月 20 日），美国就进行了反卫星武器试验，以“保护人类”、阻止失效卫星重新进入大气层为由，摧毁了自己失效卫星 USA-193。
 
-授之以鱼不如授之以渔。中共病毒持续蔓延，比起给各企业与个人支付各种补贴外，提供适应后疫情时代发展的实用课程显得更加意义重大，从长期看更有助于维持社会稳定、促进经济发展。
+2008年2月29日，中俄在联合国裁军谈判论坛上提出《禁止太空武器及对太空物体使用或威胁使用武力条约》（PPWT）条约草案。PPWT 对联合国防止外层空间军备竞赛（PAROS）决议进行了补充和扩展，定义了“外层空间武器”等相关术语，并提议制定附加协议，建立“核查遵守太空军备竞赛的措施”的条约，遭美国否决。
 
-信息来源：[**「コロナ失業」の労働者にデジタル教育、受講無料…就職・転職を後押し**](https://news.yahoo.co.jp/articles/ae2cb1fbf4d99a61fd18245cec19679a3247bd67)
+俄罗斯试图说服华盛顿“共同努力防止太空军备竞赛并避免部署武器”的努力失败了。同样，中共国政府也抨击美国的军事太空政策，中共国国防部发出警告，美国和其它建立太空军事力量的国家可能“引发太空军备竞赛，并对未来世界产生影响”。
 
-*校对：东京樱花团 / 東洋武士*
-*发布：东京樱花团 / 平安卿卿*
-![](https://assets.gnews.org/wp-content/uploads/2021/12/yht.jpg)
+美国“从太空时代的早期开始”就一直在争取太空主导地位，根据美国太空历史学家 Dwayne Allen Day 的说法，美国在 1957 年 10 月 4 日苏联发射人造卫星后立即启动了一系列反卫星武器 (ASAT) 计划，苏联解体后，美国是唯一可以进行太空作战的国家。
+
+北约的太空政策建立在美国太空司令部 (USSPACECOM) 1997 年“2020 年愿景”战略之上，该战略寻求国家在太空领域的持续领先和全方位主导。
+
+美国太空司令部的计划文件指出，“太空将由美国控制和主导，必要时拒绝其它国家进入”。科罗拉多州的太空司令部总部门口上方有一个牌子，上面写着“Master of Space”。
+
+2019 年 8 月，美国正式建立最新军事部门——美国太空军司令部，创建了美国太空军。
+
+*发稿：mgjxs*
+![](https://assets.gnews.org/wp-content/uploads/2022/01/TUBIAO-X.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
