--- a/gnews/7.md
+++ b/gnews/7.md
@@ -1,59 +1,84 @@
 ---
-title: 宋词新作：谒金门·人生各梦——为何七哥做到无我
+title: 新罕州寻求将伊维菌素作为法定COVID替代疗法
 ---
-`喜马拉雅农场新西兰站` [轉載自GNews](https://gnews.org/zh-hans/1897576/)
+`西班牙巴塞罗那喜悦农场` [轉載自GNews](https://gnews.org/zh-hans/1897658/)
 
-前言：2022年1月1日、1月5日、1月7日、1月9日以及1月19日的文贵大直播中，七哥谈到了人生修行与灵魂进步，用高僧大德的悟道“人生乃黄粱一梦”来通俗易懂地解读生命的价值和意义。尤其听到，七哥说“人各有梦”，感触良多，作词如下：
+**翻译：Lulumi**
 
-作者：蝴蝶泉
+![](https://assets.gnews.org/wp-content/uploads/2022/01/image-1856.png)图片来源 **：**theepochtimes.com
 
-![](https://assets.gnews.org/wp-content/uploads/2022/01/6b4d5f3b97e6116606f9ff3c8ae87b2d.jpg)
+美国食品和药物管理局警告不要服用伊维菌素治疗COVID-19，因为它是“马用药物”。然而，人用药包装的伊维菌素（如图）几十年来一直被广泛用于治疗一系列疾病，包括治疗虱子、其他寄生虫和病毒。(Natasha Holt/大纪元时报)
 
-前言：2022年1月1日、1月5日、1月7日、1月9日以及1月19日的文贵大直播中，七哥谈到了人生修行与灵魂进步，用高僧大德的悟道“人生乃黄粱一梦”来通俗易懂地解读生命的价值和意义。尤其听到，七哥说“人各有梦”，感触良多，作词如下：
+新罕布什尔州将成为美国第一个将伊维菌素作为非处方药的州，并根据众议院卫生、公众服务和老人事务委员会的一项法案，批准它作为治疗中共病毒COVID-19的受保护的治疗方法。
 
-**谒金门·草根的小我梦**
+虽然其他三个州提出的类似法案反响不佳，但新罕布什尔州法案的主要发起人告诉《大纪元时报》，她希望稍加修正的版本能够获得共和党多数派委员会的足够票数，将其提交给共和党控制的众议院批准。
 
-**百岁半。芳华镜中难见。红尘多少依恋。断肠情未变？**
+众议院已经对其他与中共病毒COVID有关的法案表示支持，包括全州范围内禁止政府和私人实施与中共病毒有关的强制措施。
 
-**功名利禄潋滟。人来人往目眩。最终奈何桥隔断。梦醒留几念？**
+州共和党众议员利亚·库什曼也是一名注册护士，她向《大纪元时报》介绍了她提出的HB3005法案：“如果人用等级的伊维菌素能够提供给COVID患者，我绝对毫不怀疑它能够挽救生命。”
 
-**谒金门·共魔的唯我梦**
+一名医生说“危险”
 
-**器官烂。配型活摘随换。夜夜新郎猎艳。非处女莫献。**
+但达特茅斯·希区柯克医疗中心的大卫·莱文博士说，开出伊维菌素“很危险，完全不符合全世界的医疗标准”。
 
-**独裁强奸民愿。盗财全球行骗。难逃天地人审判。终魂飞魄散。**
+“我绝不希望开这种药给我自己或我家人，并对任何向我的亲人推荐这种药的人采取法律行动，”莱文在他关于该法案的书面证词中写道。
 
-**谒金门·七哥的无我梦**
+美国医师协会新罕布什尔州分会会长威廉·帕尔默博士也提交了关于该法案的书面证词，他说他担心如果该法案获得通过，将有可能使该州的医疗保健系统因“伊维菌素引起的副作用”而不堪重负。
 
-**毕生愿。灭共铲除魔魇。三十年做铺垫。权色不沦陷。**
+在其专业领域内发表过600多篇同行评审论文的神经重症监护医生保罗·马瑞克博士作证说，伊维菌素“是这个星球上最安全的药物之一”。
 
-**舍命舍财无怨。功成身退无恋。迷梦早被清风换。渡过自我岸。**
+据马瑞克说，人用级别的伊维菌素在79个国家被批准用于治疗病毒。
 
-词释意：
+玛瑞克引用世界卫生组织自己的数据指出，自从1987年发现伊维菌素作为一种抗寄生虫药物以来，已经向人类发放了37亿剂。
 
-草根的小我梦
+“所以日本人、印度人、巴西人可以安全地使用，但对美国人来说却有毒。你一定是在开玩笑。”马瑞克说。
 
-普通草根总是看不透生老病死的轮回，执着青春美貌，可是岁月无情，才过半百，对镜便很难见到自己的容颜芳华如初。更放不下红尘诸多的依恋痴迷。可是扪心自问，即使是当年柔肠寸断的痴情爱恋，如今又有多少未曾改变？
+玛瑞克是由医生组成的倡导团体前线COVID-19重症监护联盟（FLCCC）的联合创始人，最近他辞去了在东弗吉尼亚医学院的职务，因为他与医院就用伊维菌素和其他替代药物治疗COVID患者进行了法律斗争。
 
-看到功名利禄欢场转换，迷失自我随波浮沉。行走在人来人往中，习惯了人情世故，须臾推诿，头晕目眩中已不知还有多少真诚坦荡。这一生的得失苦乐等到离世后经过奈何桥便隔断，到了另一个世界还能留下多少？智慧、真理、仁爱经历了这一世，我们进步了多少？
+他因推广其他疾病的替代疗法而面临医疗许可委员会的惩戒。
 
-共魔的唯我梦
+另一名医生说“成功”
 
-中共恶魔们器官烂了，物色好草民的健康器官配好型活摘随便取。夜夜做新郎双休登极乐。不是处女下属们不敢敬献。
+马瑞克在他的证词中引用了几项研究，他说这些研究明确地证明了伊维菌素具有病毒和抗炎的特性，而且它已经被成功地用于治疗致命的疾病，如蚊子传播的寨卡病毒和其他与引起COVID-19的SARS-CoV-2 RNA病毒类似的病毒。
 
-他们无所不用其极强奸民意，盗取国家财宝还不满足贪欲，还把手伸向全球行骗。他们唯我至上的把享乐建立在他人痛苦之上的人生梦，在人间要接受纽伦堡全球大审判，在天庭地狱被万神万佛审判，最终他们肮脏污秽的灵魂将魂飞魄散，丢弃到宇宙外层的永黑空间。
+《新英格兰医学杂志》最近发表了一项研究，题为“伊维菌素在预防和治疗COVID-19中的有效性的新证据回顾”。
 
-七哥的无我梦
+马瑞克说： “（伊维菌素）能杀死病毒，所以任何关于它不能杀死病毒的假设都是虚假宣传。”
 
-七哥毕生的宏愿，是灭掉中共铲除地球上这个恶魔代表。他三十年矢志不渝，一步步默默地铺垫，靠近目标，权力金钱美色也不能使他沦陷，迷失方向。
+库什曼告诉《大纪元时报》，为了平息一些对该法案的担忧，她已经提交了修正案，其中包括在任何供人使用的药房中说明它被认为是用于治疗COVID的“非标签”用途，并建立一个州级跟踪系统，记录任何服用人用伊维菌素的人所经历的不良反应。
 
-他早已看透生死，更能超脱财富，这些得失之间他依然无畏前行。甚至早已安排好，等到中共灭亡后，抛下一切功名利禄归隐山林，没有半点留恋尘世的浮华。因为他在清风看守所时，已经看透人生这场黄粱美梦，他挣脱了梦里自私、小我、软弱等人性弱点的羁绊，与另一个维度的自己，与万神万佛链接，构建了自己的无我利天下之梦。
+虽然已被美国和国外的一些科学研究确认为有效治疗COVID-19中共病毒的药物，但目前伊维菌素仅仅可作为动物的抗寄生虫治疗。
 
+为了获得药用级的伊维菌素，美国人必须从另一个国家的网上药店订购，或者从医生那里获得处方。
 
+其他地方引起的争论
 
-审核校对：Barry Jack
-上传排版：V在途中
+一些为COVID中共病毒患者开出伊维菌素处方的美国医生已经被吊销了执照或被停职。
 
+在佛罗里达州和亚利桑那州，两名COVID中共病毒患者在家属要求医院用伊维菌素为其治疗的法律诉讼中败诉后死亡。
+
+一项与新罕布什尔州提案类似的法案，最近在印第安纳州被提交给其主要由共和党人组成的卫生委员会，然而，该法案招致了该州医疗官员的大量批评，他们称之为危险的法案。
+
+印第安纳州药剂师协会副主席达伦·科温顿在反对该法案的书面证词中说：“该法案将开创一个危险的先例，让政府用自己的医疗建议取代受过训练的保健专业人员的建议。”
+
+威斯康星州的医生皮埃尔·科里是支持印第安纳州法案的少数人之一，他估计包括伊维菌素的治疗方法可以将中共病毒COVID-19的死亡人数减少约75%。
+
+10月，亚利桑那州共和党参议员凯利·汤赛德提出一项法案，禁止药剂师在公共卫生紧急情况下拒绝为伊维菌素的“非标签”用途配药。
+
+早些时候在宾夕法尼亚州，共和党议员道恩·基弗提出一项法案，允许医生开出伊维菌素以及硫酸羟氯喹的处方，用于治疗COVID-19中共病毒。
+
+这两项法案都还没有成功。
+
+在阿拉斯加，立法者已经讨论了将伊维菌素作为COVID治疗方法的法案的想法，但是到目前为止，在这个最后的边疆州还没有提出关于这个问题的法案。
+
+**素材链接：**[theepochtimes.com] [New Hampshire Seeks to Make Ivermectin an Alternative COVID Treatment Under Law](https://www.theepochtimes.com/new-hampshire-seeks-to-make-ivermectin-an-alternative-covid-treatment-under-law_4228066.html)
+
+* * *
+
+*审核：文乐
+校对：信心满满
+发稿：Nuevo唐人*
+![](https://assets.gnews.org/wp-content/uploads/2022/01/GNEWS_CH.-1-3-3.jpeg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
