--- a/gnews/8.md
+++ b/gnews/8.md
@@ -1,38 +1,32 @@
 ---
-title: 为拉近和中亚关系，中共近年狂撒数千亿
+title: Novavax疫苗在澳大利亚获得临时批准
 ---
-`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/1897566/)
+`澳喜特战旅Gnews` [轉載自GNews](https://gnews.org/zh-hans/1897647/)
 
-#### 【雅典娜快讯】，紧贴时代脉搏
+撰稿：金生水
+![](https://assets.gnews.org/wp-content/uploads/2022/01/231.png)图片来自网络
+澳媒《6PR》近日报道，澳洲治疗用品管理局已批准 Novavax（音译：诺瓦瓦克斯）中共病毒疫苗的临时批准。
 
-整理：Eileen（围剿维尼熊）
-编辑：5m
+这是第一个在澳大利亚获得监管批准的蛋白中共病毒疫苗。
 
-- ![](https://assets.gnews.org/wp-content/uploads/2022/01/a1642928368586.jpg)图片来源：雅典娜设计组
+要完全接种 Novavax，个人将需要接受两剂疫苗，相隔三周时间。
 
+它适用于 18 岁或以上的人接种。
 
-据美国之音报道：哈萨克斯坦局势的动荡不仅全球瞩目，也使中国在中亚地区的影响更加引人注意。中国近年来在中亚五个国家撒下数千亿人民币，拉近了和这些国家的关系。
+该疫苗尚未获准用作加强针注射。
 
-1991年苏联解体。1992年1月中国与中亚五国乌兹别克斯坦、哈萨克斯坦、吉尔吉斯斯坦、塔吉克斯坦和土库曼斯坦建交。2022年1月，在与五国建交30周年之际，习近平同五国总统互致贺电。
+澳洲目前主流城市12岁以上的人群两针接种率已经达到90%以上，而且停留在这一接种率已经有很长的时间，澳洲政府很难再向上推进哪怕是一个百分点。
 
-根据弗吉尼亚威廉玛丽学院研究实验室 AidData的政策分析主任萨曼莎·卡斯特 (Samantha Custer) 的说法，中国在中亚的影响力在过去几十年中呈指数级增长。上个月，卡斯特和她的合著者在一份新报告《权力走廊》中分析了中国如何利用巨额财政援助来赢得中亚和南亚国家的朋友和盟友。
+通过笔者自己的观察发现，至今部分澳洲民众坚信新冠病毒最后会有疫苗，但不信任目前市面上的主流新冠疫苗（辉瑞、阿斯利康等）。因为这款新的新冠疫苗是采用的技术和主流新冠疫苗不同，而且这种所谓的新的中共病毒疫苗因为在其他国家施打的少，所以出现医疗事故的就少，给人感觉没有什么黑历史，因此他们对这款新的新冠疫苗抱有很大期待，苦苦等待澳洲政府的批准。
 
-报告称，近二十年来，中国政府向中亚和南亚地区提供了1270亿美元的财政援助。中亚国家在吸引北京财政援助的资金方面名列前茅。
+而澳洲政府只批准了前两针，故意没有批准第三针加强针。可见一切都是被澳洲政府和达沃斯党们安排好的，希望借这一款新冠疫苗让澳洲的两针接种率无限接近于100%。同时借需要打加强针的人消耗主流新冠疫苗的库存，等到加强针的接种率推不动的时候再批准诺瓦瓦克斯用于加强针注射，最终想要达到的目的是赶在强打新冠疫苗政策被取消之前尽可能的让所有人接种，已经接种的就赶紧的打上三针，实在是邪恶至极。
 
-另外，格鲁吉亚智库 Geocase 中东研究主任埃米尔·阿夫达利安尼（Emil Avdaliani）表示，尽管中国在中亚国家的地位已经相当成功，但中国仍然面临着诸如中亚国家的民族主义和政治精英对北京的不信任等障碍。
+在一开始能够通过药物治疗解决的病症居然要通过静脉注射，可见一开始就走错了路，而澳洲政府和达沃斯党们心知肚明却没有及时刹车，而是带着无辜的老百姓们在这条错误的道路上越走越远。希望大家多多宣传关于这款刚被批准的新冠疫苗背后的阴谋，这已经是他们最后的疯狂，在这之前能救一个是一个。
 
-参考链接：
-[https://www.voachinese.com/a/chinese-money-is-the-main-factor-in-winning-influence-in-central-asian-countries/6407210.html](https://www.voachinese.com/a/chinese-money-is-the-main-factor-in-winning-influence-in-central-asian-countries/6407210.html)
+参考链接: [https://www.6pr.com.au/novavax-vaccine-granted-provisional-approval-in-australia/](https://www.6pr.com.au/novavax-vaccine-granted-provisional-approval-in-australia/)
 
-*发布：tianzhihuan*
-
-**更多资讯，请关注：
-**[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
-[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：Himalayaathena
-[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
-[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/KQQVvwBNvm)
-[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
-
+*发稿：mgjxs*
+![](https://assets.gnews.org/wp-content/uploads/2022/01/TUBIAO-X.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
