--- a/gnews/12.md
+++ b/gnews/12.md
@@ -1,7 +1,7 @@
 ---
-title: 共产党对爆料革命发起了全面的行动 更疯狂的在后头
+title: 青蒿素伊维菌素是解药
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1901818/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1901877/)
 
 编辑/整理：澳雅大直播工作组视频剪辑小队
 
