--- a/gnews/19.md
+++ b/gnews/19.md
@@ -1,7 +1,7 @@
 ---
-title: 1/24/2022 文贵直播：甜蜜蜜运动获得了党内及各界人士的支持，习近平的中国梦将成噩梦
+title: 1/24/2022 文贵直播：美股跌20%意味着什么？为什么跌了40%却毫无动静？
 ---
-`秘密翻译组-北美组` [轉載自GNews](https://gnews.org/zh-hans/1905726/)
+`秘密翻译组-北美组` [轉載自GNews](https://gnews.org/zh-hans/1905775/)
 
 秘密翻译组-北美组
 
