--- a/gnews/20.md
+++ b/gnews/20.md
@@ -1,21 +1,17 @@
 ---
-title: 有声&#124;喜马拉雅币一周分析与总结（1月17日-1月23日）
+title: 有声&#124;世卫组织建议取消国际旅行疫苗护照
 ---
-`MOSREC` [轉載自GNews](https://gnews.org/zh-hans/1905725/)
+`MOSREC` [轉載自GNews](https://gnews.org/zh-hans/1905750/)
 
 配音：香草山健身部 – 玫瑰园
+![](https://assets.gnews.org/wp-content/uploads/2021/12/%E6%9D%A1%E5%B9%85.png)
+1月19日，世界卫生组织发布了1月13日召开的中共病毒大流行紧急委员会临时会议的声明。
 
+声明中提出了世卫组织给缔约国的11项临时建议，其中第六条为“赞成解除或放宽国际旅行禁令”，第七条为“赞成国际旅行不需要中共病毒疫苗接种证明”。即世卫组织至少在建议取消国际旅行中的疫苗护照了。
 
+分析人士认为，尽管还不明确世卫组织此举意图何在，但这个建议至少对受到它影响的很多国家来说，在取消疫苗强制方面，还是有积极作用的。
 
-![](https://assets.gnews.org/wp-content/uploads/2021/10/Gnews-Logo-36-2.png)
-
-
-
-过去一周喜马拉雅币价格在42美元附近浮动，平均日交易量约5万喜币。喜币上市以来总交易量约2590万枚 ，占今年总发行量仅约2.59%。目前喜币交易在全球尚未完全开放，大型机构投资者尚未进场，市场交易量较低，价格仍被严重低估。
-
-据本周郭文贵先生在直播中透露，喜支付上线后喜币可在全球流通，不受任何政府管辖与法币兑换的限制。未来喜联储最重要的一大服务就是冷钱包的服务。热钱包存在于互联网，有被黑客的风险。冷钱包存在于硬件中，互相之间也可以交易。喜联储的冷钱包将成为中国共产党灭亡前后中国大量财富最安全储存的地方。冷钱包未来可以和量子电脑，生物科技结合，钱包密码识别人体生物特征，不受法币被人监管的限制，彻底打破法币对金融系统的国家垄断。冷钱包中的币不会丢失，硬件钱包即使丢失其中的币也可以寻回。喜联储正在与某公司合作发行外太空数字货币的计划，将冷钱包核心数据放在月球或太空中的卫星上。未来最安全的冷钱包就是人类财富的最大保险箱。
-
-原文链接：[喜马拉雅币一周分析与总结（1月17日-1月23日）](https://gnews.org/zh-hans/1901593/)
+原文链接：[世卫组织建议取消国际旅行疫苗护照](https://gnews.org/zh-hans/1901922/)
 
 音频处理/发稿：Daxia
 
