--- a/gnews/4.md
+++ b/gnews/4.md
@@ -1,53 +1,35 @@
 ---
-title: 在阿联酋在迪拜在中东的海外工人切实感受到排华的危险
+title: 【秘翻在线】美国会对俄罗斯打弹药战还是经济战？
 ---
-`喜马拉雅日本银河系农场` [轉載自GNews](https://gnews.org/zh-hans/1905932/)
+`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/1906145/)
 
-G-TV视频链接：[https://gtv.org/video/id=61ef3b6787664c47acd98328](https://gtv.org/video/id=61ef3b6787664c47acd98328)
+**撰稿：Grace**
 
-**郭文贵先生**：你看共产党从我们小到大的朋友是谁呀？一有事，我很小记得，你看我穿这个黑色西装，我受精神刺激，你知道吗？我很小的时候发现中央电视台公告，这个邓小平同志接见了柬埔寨西哈努克亲王，柬埔寨亲王西哈努克。哇塞，穿着西装，还这西装发亮。我当时就想，这哥们穿这衣裳啥料子呢？后来我就明白，原来穿的是叫做作开司米。毛的，料子。你看我很小我就受到严重影响，所以我最早我就买Cashmere的西装。
+**校对：Grace**
+![](https://assets.gnews.org/wp-content/uploads/2022/01/Screen-Shot-2022-01-24-at-9.17.44-PM.jpeg)图片来源：rt
+据《国家公共广播电台》(NPR)1月24日报道，由于考虑到大批俄罗斯军队已经集结并可能会入侵乌克兰，美国的五角大楼正在将大约8500名美军置于高度警戒状态。
 
-然后就是柬埔寨、越南、胡志明的那小四个兜，七哥当年穿四个兜。然后是乌干达、坦桑尼亚，所以七哥最早去了坦桑尼亚，尼日利亚、津巴布韦、古巴。最后把他洋爹弄出来了，苏联。你看看共产党、中国人这些年交的朋友有一个好东西吗？
+五角大楼发言人约翰·柯比（John Kirby）周一表示，尚未作出部署部队的决定。
 
-现在又是这，柬埔寨、坦桑尼亚、尼日利亚、北朝鲜、俄罗斯、伊朗、巴基斯坦，你想想中国人就交这朋友，在世界上人眼里边，你跟那些文明的人就是邪恶的对立。所以现在日本人、韩国人说：“我们现在背着亚洲人、共产党造的孽，害怕呀！” 我们在拯救整个亚洲人，我们在拯救整个世界。
+柯比说， 国防部长劳埃德·奥斯汀（Lloyd Austin） “已将美国的一系列部队置于高度准备部署状态，这增加了我们在北约启动[北约反应部队] [NATO Response Force]或出现其他情况时提供部队的准备。”
 
-中建四公司、中建一公司在非洲，还有在老挝、在尼泊尔的为啥那么给七哥打歌？在阿联酋、中东七哥的歌都排第一呀？很多都是海外工人，感同身受：“七哥，在这里边我们过去一出来仗着土豪，最近到哪儿去都害怕，你说（自己是）中国人，人说滚出去，都是TM你们这帮亚洲人整的病毒，滚！”
+柯比说，奥斯汀进一步提高了他们的状态，将部署的天数从10天缩短到5天。
 
-头两天有战友在迪拜，住在那最高的所谓的哈利法塔阿玛尼酒店，七哥在那块儿有一整大套房子。他说：“七哥，我们是真太可怕了，原来来（迪拜）当祖宗一样对待我们，现在说你哪儿来的？”一说：“你登记是哪儿的？”说：“我登记是英国人。”他说：“那你是中国人。”他说：“我是英国护照。”“出去！滚出去！”哇塞，不接待了。
+但是，据报道，拜登却是表示，他无意向乌克兰派遣美国军队，但表明他准备在俄罗斯入侵的情况下对其实施严格的经济制裁。拜登在周一与欧洲领导人通话后表示，该团队在应对俄罗斯问题上达成了  “完全一致 ”的意见。
 
-然后迪拜有一个最牛的所谓米其林法国餐厅，人家内部，一说中国人，一说话：“你是哪国护照？德国护照是吧？你是中国人是吧？不接受！”不是开玩笑呀，你罗伊你不要以为你竖个牌子你卖精子，你现在，但你因为你是中国人的精子，你受到排斥，给你打折，我告诉你这不是开玩笑的。
+白宫表示，这些领导人讨论了如果俄罗斯入侵，“准备对其施加大规模的后果和严重的经济代价”。他们还呼吁开展更多的外交活动。
 
-亚洲人和中国人被共产党的这种灾难的时候，真的排华是我们最担心的，然后就是疫苗灾难，大家不要无知，剩下我啥都不担心。
+据报道，俄罗斯在与乌克兰交界的不同地点集结了大约10万名军队。莫斯科否认它打算入侵，但美国官员担心进攻可能即将发生。
 
-你们的健康、你们的富有、你们的没打苗、你们的喜币、你们的G-Club、G-TV都是全世界最牛的，全人类最牛的，但愿你们能活着，健康地享受这些美好。其中就是疫苗威胁，还有一个就是排华、排亚裔。
+报道指出，美国已经向乌克兰提供了军事援助，最近一批20万磅的 “致命援助” 包括弹药，已于周五抵达。
 
-字幕来源：[2022年1月19日郭文贵先生直播全文字版](https://gnews.org/zh-hans/1885617/)
+而且，其他北约成员正承诺向东欧派遣舰艇或喷气式飞机。北约秘书长延斯·斯托尔滕贝格（Jens Stoltenberg ）周一表示，丹麦、法国、荷兰和西班牙正在向立陶宛、罗马尼亚或保加利亚或向黑海或波罗的海派遣或考虑派遣军事支援。
 
-编辑整理：Jacques；
+斯托尔滕贝格呼吁采取更多的外交手段来缓和紧张局势。美国国务卿安东尼·布林肯（Antony Blinken）一直在与俄罗斯外交部长谢尔盖·拉夫罗夫（Sergey Lavrov）举行会议，但两人没有取得任何突破，他们同意继续会谈。
 
-字幕文件制作：小满；
+据报道，在上周末，美国已经命令其驻基辅（Kyiv）大使馆人员的家属离开乌克兰，并出于安全考虑授权一些工作人员自愿离开。英国周一表示，它正在从其大使馆撤出一些工作人员，而澳大利亚则通知其在乌克兰的公民离开。
 
-视频制作及上传：Cindy；
-
-G-News发布：小满；
-
-**广而告之：尊敬的战友，你的每一篇文字、每一段视频、每一段社交媒体发文都是压垮骆驼的一根稻草，欢迎加入我们****——**[**日本银河系农场****Discord****群**](https://discord.com/channels/805765245758472202/851632878567948351)**，欢迎订阅我们的油管频道：**[**郭文贵先生直播精选**](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)**；**
-
-声明：文中内容根据郭文贵先生直播视频整理，如果文字内容与视频内容冲突则以原视频为准，标题仅为概括，标题与视频内容冲突之处仅代表作者个人观点。
-
-欢迎喜联盟进驻以及各农场兄弟姐妹们坐客串门，请通过以下方式关注及订阅我们——
-
-Discord：[日本银河系农场Discord群](https://discord.com/channels/805765245758472202/851632878567948351)；
-
-YouTube：[日本银河系农场](https://www.youtube.com/channel/UCYfGHsj66eHQFqAt8pYsXHA)、[小七工作室](https://www.youtube.com/channel/UCpJIF2wIaqb4VBqF3-V_7KA/videos)、[刁民热线](https://www.youtube.com/channel/UCybJyCc-WPhvAXHnjoh06SQ) 、[Hello Friend 你好,朋友](https://www.youtube.com/channel/UCTc1E9DAHXliBuHIveYORjQ/featured)、[Galaxy NFSC](https://www.youtube.com/channel/UCuoWQD3AbdCLi4VkSlYjyRQ/videos)、[银河系档案放映馆](https://www.youtube.com/channel/UCJ0FJt00cutaMfhE2kuXd3A) 、[郭文贵先生直播精选](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)；
-
-G-News：[喜马拉雅日本银河系农场 G-News](https://gnews.org/zh-hans/author/jgalaxy2021/)、[日本银河系农场-阿尔法星球](https://gnews.org/zh-hans/author/galaxyalphaplanet/) 、[银河勇气之星](https://gnews.org/zh-hans/author/yinyongqi/)、[NewFOC](https://gnews.org/zh-hans/author/newfoc/) ；
-
-盖特：[日本银河系农场@himalayajgalaxy盖特](https://www.gettr.com/user/himalayajgalaxy)；
-
-推特：[日本银河系农场\[email protected\]推特](https://twitter.com/HJapanGalaxyII)；
-
-G-TV：[日本银河系农场](https://gtv.org/user/60c0168b8ce6da73c416c24b#home)。
+**新闻来源： **[The U.S. is placing 8,500 troops on alert for possible deployment to Eastern Europe](https://www.npr.org/2022/01/24/1075389920/us-troops-eastern-europe-russia-ukraine)
 
  
 
