--- a/gnews/9.md
+++ b/gnews/9.md
@@ -1,7 +1,7 @@
 ---
-title: 七哥谈佛和魔【盖特版本】
+title: 爆二代的诺亚方舟
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1905875/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1906043/)
 
 编辑/整理：澳雅大直播工作组视频剪辑小队
 
