--- a/gnews/10.md
+++ b/gnews/10.md
@@ -1,15 +1,13 @@
 ---
-title: 新中国联邦组建的G系列在落实纠正即将到来的印尼排华
+title: 七哥和新中国联邦必将让世界找到病毒真相停止疫苗灾难
 ---
-`喜马拉雅日本银河系农场` [轉載自GNews](https://gnews.org/zh-hans/1905852/)
+`喜马拉雅日本银河系农场` [轉載自GNews](https://gnews.org/zh-hans/1906036/)
 
-G-TV视频链接：[https://gtv.org/video/id=61ef3b2387664c47acd98305](https://gtv.org/video/id=61ef3b2387664c47acd98305)
+G-TV视频链接：[https://gtv.org/video/id=61ef3bef87664c47acd98373](https://gtv.org/video/id=61ef3bef87664c47acd98373)
 
-**郭文贵先生**：所以我们新中国联邦现在有巨大的责任为中国人在海外的形象，为中国人在海外的安全，为中国人的孩子争取一个公平的环境和安全的环境，这有巨大的责任。这是为什么我们最早在美国，在西方没有任何人敢说不是我们干的，是吧？这你们都承认吧？中国共产党不等同于中国人。海外的这些所谓的各侨会，共产党的“蓝金黄”，过去的所谓的代表民运的，打着“六四”幌子欺骗的血绿卡者，靠捐款活着的这帮骗子们，他不代表中国人。
+**郭文贵先生**：关于溯源的问题，刚才Alice问的这个，一定会溯源的，你不管他谁怎么勾兑，你放心有七哥在，有新中国联邦在。我每天给你们祈福的时候，知道吗？我从2020年病毒开始我祈福中，你看越来时间越长，因为内容越来越多，其中一条祈求万佛万神给七哥力量找到病毒真相，停止疫苗灾难。
 
-这是为什么新中国联邦，爆料革命到今天，让你不打疫苗，就这一样，新中国联邦已经对得起所有的人了；第二个没让大家任何人掏过钱包，也没有让你解过裤腰带；第三个还让你拥有喜币；第四个喊出了中国人不等于共产党，共产党不等同于中国人，中国人不应该受到排斥和误解；第五个，我们组建了G-TV 、G-News、 G-Fashion、 G-Clubs、喜联储。所有的媒体在执行，在落实，在纠正，在避开即将到来的类似印尼排华的、杀华的，大屠杀的灾难的到来。
-
-疫苗的灾难最后的抱怨，最危险的就是排华。不管排华，我再重申一遍：亚洲人。现在西方里面没有多少人分清楚亚洲人和中国人。这是为什么现在韩国人，现在还有日本人跟我们联系的每个人都很激动，经常就是哭啼呀。你看到中国人爱掉眼泪，你没见过韩国人、日本人爱掉眼泪。最近包括印尼的、新加坡的、台湾的、韩国人，一跟我通视频就哭。昨天晚上一家人哭得稀里哗啦的，一个日本的议员，是吧。一家人家哭，说：“郭先生，我们孩子都在美国读书，在加拿大读书。在学校被理解成中国人，很害怕。感谢你呀，为亚洲人呼吁。” 黄皮肤现在成了原罪的代言人了，这就是共产党。
+而且有七哥、有新中国联邦在，你放心一定会找到病毒的真相，一定会停止疫苗灾难，当然得溯源了。七哥和新中国联邦的力量你们真的不知道，就现在像Rosemary后边的宇宙（背景），她就爱玩宇宙，宇宙里边的背景一样，那是巨大的。
 
 字幕来源：[2022年1月19日郭文贵先生直播全文字版](https://gnews.org/zh-hans/1885617/)
 
