--- a/gnews/13.md
+++ b/gnews/13.md
@@ -1,17 +1,23 @@
 ---
-title: 七哥与爆二代分享如何与人相处
+title: 七哥对媒体的理解（二）
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1905782/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1906008/)
 
-编辑/整理：澳雅大直播工作组视频剪辑小队
+整理：雅典娜速记组
+编辑：tianzhihuan
 
-*发布：*Frank2021
+刚才你没有回答我的问题，为什么十大媒体这要采访我都拒绝了？答案非常简单啊，10家媒体来采访这个龙头的事情，最后一定记住，我们会发生10家媒体的大战。
 
-**更多资讯，请关注：****
-**[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
+它一定会说你坏话，同时也打破了传播目的，为啥我不接收呢？不到时候，就这一句话，不到时候，什么时候到时候盘古要变成火龙了，都检查完了，这个什么都检查完了，这个什么管道都没问题了。变成火龙的时候，那个时候我是我该说话了，它一定会说这是郭文贵干的啊。在美国控制了，把龙变成了火龙，那个绝对会成为全世界最大的（新闻）。
+
+到底世界上存不存在的第三方力量？到底有没有外星人？小王子最关心的外星人，还有我们的小飞侠最关心的有没有外星人啊？这都会给你给你答案。另外一个会告诉你共产党它到底是一个无神论党还是有神论党？它打压宗教到底是假的是真的？它为什么打压其他宗教？无神论的时候，它要装神弄鬼？第3个会证明倒是把裕达的佛手要成为火手，它为什么会同时爆发？ 然后它栽赃我的时候，到时候看看到底是新中国联邦干的还是天意干的。
+![](https://assets.gnews.org/wp-content/uploads/2022/01/七哥对媒体的理解（二）-.jpg)
+发布： *tianzhihuan*
+
+更多资讯，请关注：
+[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
 [澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
-[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
-[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/dKQ6vFY9Fu)
+[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/76QVRChsgU)
 [澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
 
  
