--- a/gnews/22.md
+++ b/gnews/22.md
@@ -1,15 +1,21 @@
 ---
-title: 有声&#124;荷兰光刻机大厂抓出中共内鬼取销中共订单
+title: 有声&#124;喜马拉雅币一周分析与总结（1月17日-1月23日）
 ---
-`MOSREC` [轉載自GNews](https://gnews.org/zh-hans/1905679/)
+`MOSREC` [轉載自GNews](https://gnews.org/zh-hans/1905725/)
 
 配音：香草山健身部 – 玫瑰园
-![This image has an empty alt attribute; its file name is Screen-Shot-2021-08-30-at-7.37.59-PM.png](https://assets.gnews.org/wp-content/uploads/2021/08/Screen-Shot-2021-08-30-at-7.37.59-PM.png)
-当地时间1月21日，郭文贵先生在大直播中谈到中共在发展晶片产业上遭受重大挫败。 其中爆料革命战友发挥了重要的关键角色。
 
-中共多年前利用蓝金黄方式收买了荷兰光刻机大厂艾司摩尔派驻到中共的工程师。 中共女间谍与其结婚生子，借此方式进行渗透。 这些真相经由战友提供给艾司摩尔公司，并经过英国情报部门的证实，终于让该公司警觉到中共的渗透。同时在美国的施压下，荷兰政府拒绝授予艾司摩尔出口先进光刻机系统许可证，最终取消了中共先前超越市场行情的高价订单。
 
-原文链接：[荷兰光刻机大厂抓出中共内鬼取销中共订单](https://gnews.org/zh-hans/1898269/)
+
+![](https://assets.gnews.org/wp-content/uploads/2021/10/Gnews-Logo-36-2.png)
+
+
+
+过去一周喜马拉雅币价格在42美元附近浮动，平均日交易量约5万喜币。喜币上市以来总交易量约2590万枚 ，占今年总发行量仅约2.59%。目前喜币交易在全球尚未完全开放，大型机构投资者尚未进场，市场交易量较低，价格仍被严重低估。
+
+据本周郭文贵先生在直播中透露，喜支付上线后喜币可在全球流通，不受任何政府管辖与法币兑换的限制。未来喜联储最重要的一大服务就是冷钱包的服务。热钱包存在于互联网，有被黑客的风险。冷钱包存在于硬件中，互相之间也可以交易。喜联储的冷钱包将成为中国共产党灭亡前后中国大量财富最安全储存的地方。冷钱包未来可以和量子电脑，生物科技结合，钱包密码识别人体生物特征，不受法币被人监管的限制，彻底打破法币对金融系统的国家垄断。冷钱包中的币不会丢失，硬件钱包即使丢失其中的币也可以寻回。喜联储正在与某公司合作发行外太空数字货币的计划，将冷钱包核心数据放在月球或太空中的卫星上。未来最安全的冷钱包就是人类财富的最大保险箱。
+
+原文链接：[喜马拉雅币一周分析与总结（1月17日-1月23日）](https://gnews.org/zh-hans/1901593/)
 
 音频处理/发稿：Daxia
 
