--- a/gnews/27.md
+++ b/gnews/27.md
@@ -1,36 +1,29 @@
 ---
-title: 谷歌在新的诉讼中被指控 &#8220;侵犯 &#8220;用户隐私
+title: 美国就《防止强迫维吾尔人劳动法》征求公众意见
 ---
-`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/1905378/)
+`英國倫敦喜莊園 Himalaya London Club UK` [轉載自GNews](https://gnews.org/zh-hans/1905604/)
 
-**【雅典娜快讯】，紧贴时事脉搏**
-![](https://assets.gnews.org/wp-content/uploads/2022/01/image-2037.png)图片来源：citrixnews.cz
-编译：Lish
+![](https://assets.gnews.org/wp-content/uploads/2022/01/Unknown-36.jpg)美国就《防止强迫维吾尔人劳动法》征求公众意见 网络图片
+据美国之音1月25日报道，美国国土安全部24日就实施《 防止强迫维吾尔人劳动法》征求公众意见，以便继续禁止在中共国、包括在新疆通过强迫劳动生产的产品进口到美国。公众有45天的时间提出他们的看法。在收到公众评论后，强迫劳动执行特别工作组将举行一次公开听证会，并制定一项实施战略。美国海关和边境保护局将发布进口商需遵循的指导原则。
 
-一月24号周一，德克萨斯州、印第安纳州、华盛顿州和哥伦比亚特区的总检察长已对谷歌提起诉讼，称其在获取用户的位置数据时采用了“欺骗性和不公平”的做法。
+去年12月，《防止强迫维吾尔人劳动法》获得国会两党和参众两院的一致通过，拜登总统随后将其签署成法。该法案在签署令后180天正式生效。该法案禁止新疆产品进口美国，除非企业能提供明确且令人信服的证据，证明产品非由强迫劳动制造。
 
-哥伦比亚特区总检察长卡尔·拉辛（Karl A. Racine）周一在一份声明中宣布，该诉讼寻求结束谷歌“非法使用*“*黑暗模式”，并 收回从位置数据中获得的利润”。
+中共在新疆犯下的种族灭绝和反人类罪，人神共愤。新法案将会加快美中经济脱钩，并对全球供应链造成影响。但是中共的罪行不能继续容忍，新疆的人权问题不能再被忽视。
 
-拉辛称，自2014年以来，无论用户的隐私设置如何，谷歌都在调查用户的信息，并造成一种数据没有被追踪的欺骗性假象。诉讼称，如果谷歌用户关闭了他们的位置数据，他们就会收到试图欺骗他们再次分享这些数据的通知。
+新闻参考链接：[https://www.voachinese.com/a/DHS-forced-labor-act-xinjiang-20220124/6410579.html](https://www.voachinese.com/a/DHS-forced-labor-act-xinjiang-20220124/6410579.html)
 
-该诉讼指出“通过反复“催促”用户启用谷歌账户设置，谷歌增加了用户无意中或因厌烦而启用该设置的机会”。
+* * *
 
-该诉讼还指责这家科技公司对某些隐私设置和更新进行了“误导、模糊和不完整的描述”，导致许多人在不知情的情况下分享数据。
+- [点击阅读英国伦敦喜庄园在G-News 的更多精彩文章](https://gnews.org/zh-hans/author/himalaya_hawk/)
+- [点击观看英国伦敦喜庄园在G-TV的精彩视频](https://gtv.org/web/#/UserInfo/5ee680a45bd6f123dd104807)
+- [欢迎加入【英国伦敦喜庄园】Discord官方群](https://discord.gg/VsNaHaMUsy)
 
-总检察长们写道，这些做法 “损害了希望保护其敏感位置信息的消费者”，使他们无法从谷歌及其广告公司那里获得信息。
 
-谷歌否认了这些指控，称该诉讼提出了“关于我们设置的不准确的主张和过时的论断”。他们承诺将对这些指控进行 “大力”辩护。
+编辑：【英国伦敦喜庄园编辑部】
 
-原文链接：[Google accused in new lawsuit of ‘invading’ user privacy — RT World News](https://www.rt.com/news/547229-google-lawsuit-location-data/)
+![](https://assets.gnews.org/wp-content/uploads/2021/08/41bf97c0-3bb2-4a07-ad75-91b96dc3203c.jpg)
 
-发布：Lish
 
-**更多资讯，请关注：****
-**[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
-[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
-[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
-[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/KQQVvwBNvm)
-[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
 
  
 
