--- a/gnews/29.md
+++ b/gnews/29.md
@@ -1,66 +1,36 @@
 ---
-title: 美媒曝中共病毒测试公司涉嫌造假及掩盖
+title: 谷歌在新的诉讼中被指控 &#8220;侵犯 &#8220;用户隐私
 ---
-`华盛顿DC-Russian` [轉載自GNews](https://gnews.org/zh-hans/1905281/)
+`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/1905378/)
 
-![](https://assets.gnews.org/wp-content/uploads/2022/01/C-5.jpg)reddit.com
-《真相报道》（truth press）1月23日发表文章，题目是“心脏地带州（Heartland State）公司称中共病毒（Covid）测试公司涉嫌丑闻掩盖”。
+**【雅典娜快讯】，紧贴时事脉搏**
+![](https://assets.gnews.org/wp-content/uploads/2022/01/image-2037.png)图片来源：citrixnews.cz
+编译：Lish
 
-全文如下：
+一月24号周一，德克萨斯州、印第安纳州、华盛顿州和哥伦比亚特区的总检察长已对谷歌提起诉讼，称其在获取用户的位置数据时采用了“欺骗性和不公平”的做法。
 
-明尼苏达总检察长埃利森（Keith Ellison）正在起诉两家位于伊利诺斯州的公司，指控他们在中共（冠状）病毒的测试方面涉嫌“欺骗消费者”。
+哥伦比亚特区总检察长卡尔·拉辛（Karl A. Racine）周一在一份声明中宣布，该诉讼寻求结束谷歌“非法使用*“*黑暗模式”，并 收回从位置数据中获得的利润”。
 
-根据埃里森办公室周三发布的一份新闻稿，这起诉讼声称这两家公司，即中共病毒控制中心（CCC，the Center for COVID Control）和医生临床实验室有限公司（DCL，Doctors Clinical Laboratory, Inc），“要么未能提供检测结果，要么提供了伪造或不准确的检测结果。”
+拉辛称，自2014年以来，无论用户的隐私设置如何，谷歌都在调查用户的信息，并造成一种数据没有被追踪的欺骗性假象。诉讼称，如果谷歌用户关闭了他们的位置数据，他们就会收到试图欺骗他们再次分享这些数据的通知。
 
-根据《国家广播公司新闻网》（NBC News）1月14日的报道，中共病毒控制中心（CCC）是中共病毒测试领域最大的测试机构之一，在全国范围内运营着300多个站点。该报道指出，该公司正在接受联邦的调查，并在接受几个州总检察长的调查。
+该诉讼指出“通过反复“催促”用户启用谷歌账户设置，谷歌增加了用户无意中或因厌烦而启用该设置的机会”。
 
-埃里森的新闻稿称，医生临床实验室（DCL，Doctors Clinical Laboratory）是CCC的“联合实验室”。
+该诉讼还指责这家科技公司对某些隐私设置和更新进行了“误导、模糊和不完整的描述”，导致许多人在不知情的情况下分享数据。
 
-根据新闻稿，CCC在明尼苏达州采集样本，然后将样本交给DCL进行测试，能快速检测出中共病毒测试结果。
+总检察长们写道，这些做法 “损害了希望保护其敏感位置信息的消费者”，使他们无法从谷歌及其广告公司那里获得信息。
 
-周三在亨内平郡（Hennepin County）地方法院提起的诉讼指控这些公司提供的测试结果“往往充满欺骗性的不准确和虚假信息，包括列出错误的测试类型以及从消费者那里收集样本进行测试的虚假日期和时间”。
+谷歌否认了这些指控，称该诉讼提出了“关于我们设置的不准确的主张和过时的论断”。他们承诺将对这些指控进行 “大力”辩护。
 
-更糟糕的是，根据诉讼，一些从未提交过样本的明尼苏达州人报告说，他们收到了这些公司的测试结果。新闻稿指出，“更令人不安的是，被告欺诈性地表示明尼苏达州消费者的中共病毒检测呈阴性，尽管消费者从未向被告提交样本进行测试。”
+原文链接：[Google accused in new lawsuit of ‘invading’ user privacy — RT World News](https://www.rt.com/news/547229-google-lawsuit-location-data/)
 
-该诉讼称明尼苏达州卫生部于12月开始收到有关投诉。
+发布：Lish
 
-根据新闻稿，前CCC员工告诉总检察长办公室，“虽然该公司最初可以处理大量的本地测试，但随着该公司在全国各地开设检测点，包括在明尼苏达州，其处理中心却未能扩大。正如一位前员工所描述的，测试结果非常混乱，收到的样本被塞进了散落在办公室地板上的垃圾袋中。”
-
-新闻稿称，一些前雇员回忆说，“发现袋子里的样品已经超过48小时，管理层指示他们伪造收件日期，并指示他们向消费者撒谎说他们的测试没有结果或阴性，而事实上样品没有被测试过。”
-
-根据CNN周五（1月21日）的报道，CCC没有回复置评请求，但该公司此前曾发布声明，宣布将在1月14日至1月22日暂停运营，因为“正如广泛报道的那样，异常高的需求已经对我们部分地区的人力资源带来压力，影响了我们通常的客户服务标准和诊断目标。”
-
-然而，在周四（1月20日）的新闻稿中，该公司宣布“暂停”将无限期延长，“直到人力资源允许CCC具备满负荷运行的能力”。
-
-新闻稿称：“正如之前宣布的那样，CCC正在利用这一运营间歇期，对新增员工进行样本收集和处理、客户服务和沟通最佳实践，以及遵守监管指南等方面的培训，CCC将在适当时提供重新开放计划的更新。”
-
-保守的美国人非常清楚，埃里森办公室的任何行动都应该以怀疑的眼光来看待。作为民主党全国委员会的前成员，他的党性和对左翼的同情已经不是秘密。
-
-然而，像这样的诉讼不是一件小事，每个人都希望这些公司提供准确的结果。如果诉讼的要求是准确的，他们不诚实的行为无疑给许多人造成了真正的伤害。
-
-那些收到假阴性检测结果的人将被允许外出，并有可能将病毒传播给他人。有多少人可能因这起诈骗案而被感染？有多少人可能已经死了？
-
-另一方面，假阳性结果会迫使其他人取消工作、旅行等，同时他们会忍受不必要的隔离。
-
-当人们考虑到CCC在美国运营着数百个检测点时，这些指控变得更加令人不安。有多少美国人会受到这样的欺骗的影响？
-
-如果这些指控得到证实，那么这两家公司就是进行了大规模的掩盖以维持这一局面。
-
-在疫情尘埃落定之前，我们很可能会听到很多很多个人和企业从中逐利的故事。
-
-像这样的报道是许多美国人越来越难以“相信科学”的原因之一。谁又能责怪他们呢？
-
-（全文完）
-
-测试机构也是阴谋集团必须操控的环节，他们通过数据造假、掩盖真相而制造恐惧，为强制疫苗接种推波助澜。阴谋链正在被揭开，罪恶集团死期已近，中共你完了！
-
-有关链接：
-
-[https://truthpress.news/news/covid-testing-company-engaged-in-scandalous-cover-up-says-heartland-state/](https://truthpress.news/news/covid-testing-company-engaged-in-scandalous-cover-up-says-heartland-state/)
-
-**华盛顿DC 望七星**
-
-**编辑发布  水星**
+**更多资讯，请关注：****
+**[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
+[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
+[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
+[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/KQQVvwBNvm)
+[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
 
  
 
