--- a/gnews/3.md
+++ b/gnews/3.md
@@ -1,7 +1,7 @@
 ---
-title: 七哥聊力量与自立
+title: 人如音乐做自己
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1905939/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1906146/)
 
 编辑/整理：澳雅大直播工作组视频剪辑小队
 
