--- a/gnews/8.md
+++ b/gnews/8.md
@@ -1,45 +1,19 @@
 ---
-title: 文·贵天成（特别篇）——爆料革命历史上的1月26日（六）
+title: 七哥对媒体的理解（一）
 ---
-`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/1905886/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1906044/)
 
-整理：BENJ1
-编辑：Damon
+整理：雅典娜速记组
+编辑：tianzhihuan
 
-- ![](https://assets.gnews.org/wp-content/uploads/2022/01/截圖-2022-01-24-下午7.04.10.png)图片来源：雅典娜设计组
+没有任何媒体是说人好话的，几乎不可能，能出来说你好话的只有2个结局啊，说你好话，人死了说你两句好话是吧？ ！还有一个顺便说你好话来证明别人啊。想说别人的坏话的同时还证明说（你）好话，没有人这样，这怎么要求呢？媒体哪有是好东西，哪有说好话的，我只要它传播就可以，它这个只要传播，共产党它把龙头啊变成了龟头，变成了鸟头，它就行了。说我什么国际通缉犯的什么还。刚才还说它播蛇妖闫呢，它播蛇妖闫是因为我们把它弄成蛇妖闫呢, 人家世界上并没有，我们把她干掉了，她甚至撒谎，我们并没有大致揭发她，这都是个客观的看待，不要（只）是要求人，一个电台都和你一样，这就是我们身上很大的病啊，就是我们新中国联邦现在就有个毛病，只要说我不好的，都是我敌人，只要不和我想法一样的，都是我的敌人，只要不按照我要求办的，都是我敌人。川普没发布戒严令川普，川普该死，川普没有这个抓拜登，川普窝囊，拜登没抓川普，拜登窝囊，你用你这种想法的话，那世界上在那不早就乱套了嘛，啊，在你世界上只有一种人，黑和白要（嘛）白存在，要么黑存在，黑白是永远相互存在的，黑天和白夜永远是在的，就是特别是人家媒体说你不好，你就只能夸你好，像你们夸七哥，要么七哥夸的简直是是吧？那，那就不叫媒体了。
 
+就是日本的报道，它被共产党给黑掉。马上说你给我关了，就说明对共产党来讲，它不是好事啊是吧？我们要有一个有一个基本的判断，接受得了别人说反话，能听进去不同的话，关键的问题，你可以说我99.9都可以骂我攻击我，你只要说一句话管用的都行。
+![](https://assets.gnews.org/wp-content/uploads/2022/01/七哥对媒体的理解（一）-1-1.jpg)
+发布： *tianzhihuan*
 
-**今天是爆料革命三周年**
-
-亲爱的兄弟姐妹们，今天是什么日子，大家知道吗？农历初二！三年前，2016年的年底（2017年1月26号），是文贵人生中最重要的时刻，（开始）爆料革命，到现在是整整三个年头。当再次站在这里的时候，感触是很不一样的。说实在话，昨天是怎么也睡不着了。我一般是天塌下来，也影响不了我睡觉，睡不着了，一直在那想，这三年来有多少事情做的是对的？有多少事情做的是不对的？昨天恨不得扇自己脸一千次、一万次，觉得有太多话说的不对，有太多事干的不好，觉得自己真是太多缺漏，一堆的毛病。
-
-**三****年来万佛万神****对爆料革命的帮助（感谢上天的万佛万神）**
-
-经过这三年的爆料革命，我左思右想，感觉到确确实实在这三年里面，有太多连我自己都无法解释，没办法用常理能去解释的事情。真的感受到了上天对文贵的这种帮助、保护、还有对我的提示。没有上天的安排，文贵真到不了这三年。所以说感谢上天，没有上天的万佛万神，这三年的爆料革命绝不可能到今天，这真的是天意！
-
-**对体制内支持爆料革命朋友的感谢**
-
-我昨天也是想来想去，对国内的、在体制内的、曾经认识文贵的老朋友和后来不认识文贵，因为爆料革命认识文贵，一直支持文贵的战友们，没有你们的支持，没有你们的信任和奉献，文贵也到不了今天，对所有的老朋友和在爆料革命结识的新战友，衷心地表示感谢。
-
-**对盘古、裕达同事的感谢**
-
-最大的付出（者）就是北京盘古、政泉和裕达，我的同事，还有家人们，付出太大了，用任何语言无法形容，文贵在此，对所有的同事们和家人们，（对）因牵连、祸连九族带来的灾难结果和伤害，表示万分的抱歉。
-
-**对因传播爆料革命而被迫害的战友的感谢**
-
-爆料革命，让我们结识了海量的海内外的华人，包括外国朋友和国内的战友们。因为爆料革命被喝茶、被拘捕、被判刑、被抓，因为转发文贵爆料的视频，受到伤害的战友们，对你们表示绝对的敬意和万分的歉意。
-
-往期回顾：
-[文•贵天成（特别篇）——爆料革命历史上的1月26日（一）](https://gnews.org/zh-hans/1900501/)
-[文•贵天成（特别篇）——爆料革命历史上的1月26日（二）](https://gnews.org/zh-hans/1900530/)
-[文•贵天成（特别篇）——爆料革命历史上的1月26日（三）](https://gnews.org/zh-hans/1900569/)
-[文·贵天成（特别篇）—— 爆料革命历史上的1月26日（四）](https://gnews.org/zh-hans/1905740/)
-[文·贵天成（特别篇）——爆料革命历史上的1月26日（五）](https://gnews.org/zh-hans/1905800/)
-
-*发布：tianzhihuan*
-
-**更多资讯，请关注：
-**[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
+更多资讯，请关注：
+[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
 [澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
 [澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/76QVRChsgU)
 [澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
